ZCS-11688:Transaltions added for Storage management

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -635,13 +635,13 @@ DLTBB_Delete_tt = Suprimeix la llista de distribuci\u00f3
 DLTBB_Edit_tt = Edita la llista de distribuci\u00f3
 DLTBB_Cancel_tt = Cancel\u00b7la la creaci\u00f3 de llista de correu
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Obre el quadre de di\u00e0leg d\u2019HSM per iniciar una sessi\u00f3 d\u2019HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Obre el quadre de di\u00e0leg d\u2019SM per iniciar una sessi\u00f3 d\u2019SM
+HSM_Title = SM
 HSM_Server_tt = \
 	Tancar aquest di\u00e0leg no suspendr\u00e0 la sessi\u00f3 d\u2019HSM. \
-	Per comprovar l\u2019estat de la sessi\u00f3 d\u2019HSM, torneu a obrir aquest quadre fent clic al bot\u00f3 HSM de la barra d\u2019eines.
-HSM_COMPONENT_UNAVAILABLE = El component HSM de la banda del servidor no est\u00e0 instal\u00b7lat.
+	Per comprovar l\u2019estat de la sessi\u00f3 d\u2019SM, torneu a obrir aquest quadre fent clic al bot\u00f3 SM de la barra d\u2019eines.
+HSM_COMPONENT_UNAVAILABLE = El component SM de la banda del servidor no est\u00e0 instal\u00b7lat.
 
 STATUSTBB_Failover = Recuperaci\u00f3 despr\u00e9s d\u2019errors
 STATUSTBB_Failover_tt = Servidor de recuperaci\u00f3 despr\u00e9s d\u2019errors
@@ -728,9 +728,9 @@ Alert_Flush_Theme_Cache =  <b>Nota:</b> \
 
 Alert_Ngnix = <b>Nota:</b> Per que els canvis en la configuraci\u00f3 tinguin efecte, cal reiniciar Ngnix.
 
-HSM_ProcessStatus = S\u2019est\u00e0 executant la sessi\u00f3 HSM.<br>{0} BLOB moguts. {1} b\u00fasties de correu processades. {2} b\u00fasties de correu pendents.
-HSM_StatusReport = L\u2019\u00faltima sessi\u00f3 de HSM es va iniciar el {0} i va acabar el {1}
-HSM_InfoUnavailable = No hi ha dades disponibles sobre la darrera sessi\u00f3 HSM
+HSM_ProcessStatus = S\u2019est\u00e0 executant la sessi\u00f3 SM.<br>{0} BLOB moguts. {1} b\u00fasties de correu processades. {2} b\u00fasties de correu pendents.
+HSM_StatusReport = L\u2019\u00faltima sessi\u00f3 de SM es va iniciar el {0} i va acabar el {1}
+HSM_InfoUnavailable = No hi ha dades disponibles sobre la darrera sessi\u00f3 SM
 
 SERTBB_New_tt = Nou servidor
 SERTBB_Edit_tt = Edita servidor
@@ -846,8 +846,8 @@ NAD_Tab_AUTH = Autenticaci\u00f3
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Serveis
-NAD_Tab_VolumeMgt = Volums
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u0047\u0065\u0073\u0074\u0069\u00f3 \u0064\u0027\u0065\u006d\u006d\u0061\u0067\u0061\u0074\u007a\u0065\u006d\u0061\u0074\u0067\u0065
+NAD_Tab_HSM = \u0047\u0065\u0073\u0074\u0069\u00f3 \u0064\u0027\u0065\u006d\u006d\u0061\u0067\u0061\u0074\u007a\u0065\u006d\u0061\u0074\u0067\u0065
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Servidor intermediari
 NAD_Tab_Bind_IP = Vincles d\u2019adreces IP
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = S\u2019ha produ\u00eft un error en moure l\u2019\u00e0lies
 FAILED_REINDEX = S\u2019ha produ\u00eft un error en refer la indexaci\u00f3. Codi d\u2019error {0}
 FAILED_REINDEX_DETAILS = Detalls:
 
-FAILED_HSM = S\u2019ha produ\u00eft un error a la sessi\u00f3 HSM. Codi d\u2019error {0}
+FAILED_HSM = S\u2019ha produ\u00eft un error a la sessi\u00f3 SM. Codi d\u2019error {0}
 FAILED_HSM_DETAILS = Detalls:
 
 ERROR_CODE = Codi d\u2019error:
