--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -630,11 +630,11 @@ DLTBB_Delete_tt = Slet distributionsliste
 DLTBB_Edit_tt = Rediger distributionsliste
 DLTBB_Cancel_tt = Annuller oprettelse af distributionsliste
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u00c5bn HSM-dialog for at starte en HSM-session
-HSM_Title = HSM
-HSM_Server_tt = Lukning af denne dialog vil ikke afbryde HSM-sessionen. Hvis du vil kontrollere statussen p\u00e5 HSM-sessionen, \u00e5bner du denne dialog igen ved at klikke p\u00e5 HSM-knappen p\u00e5 v\u00e6rkt\u00f8jslinjen.
-HSM_COMPONENT_UNAVAILABLE = Serversidens HSM-komponent er ikke installeret.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u00c5bn SM-dialog for at starte en SM-session
+HSM_Title = SM
+HSM_Server_tt = Lukning af denne dialog vil ikke afbryde SM-sessionen. Hvis du vil kontrollere statussen p\u00e5 SM-sessionen, \u00e5bner du denne dialog igen ved at klikke p\u00e5 SM-knappen p\u00e5 v\u00e6rkt\u00f8jslinjen.
+HSM_COMPONENT_UNAVAILABLE = Serversidens SM-komponent er ikke installeret.
 
 STATUSTBB_Failover = Failover
 STATUSTBB_Failover_tt = Failover-server
@@ -689,7 +689,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>Advarsel:</b> \u00c6ndringer til disse indstillinger kr\u00e6ver proxygenstart for at tr\u00e6de i kraft.
 Alert_AmavisdRestart = <b>Bem\u00e6rk:</b> \u00c6ndringer af indstillinger kr\u00e6ver genstart af amavisd, f\u00f8r de tr\u00e6der i kraft.
-Alert_HSM = <b>Bem\u00e6rk:</b> Du kan iv\u00e6rks\u00e6tte en HSM-session manuelt ved at klikke p\u00e5 knappen \u201eStart HSM-session\u201c. HSM-sessioner kan ogs\u00e5 planl\u00e6gges p\u00e5 servere gennem cron-jobs. <br>
+Alert_HSM = <b>Bem\u00e6rk:</b> Du kan iv\u00e6rks\u00e6tte en SM-session manuelt ved at klikke p\u00e5 knappen \u201eStart SM-session\u201c. SM-sessioner kan ogs\u00e5 planl\u00e6gges p\u00e5 servere gennem cron-jobs. <br>
 Alert_InternalPassword = <b>Bem\u00e6rk:</b> Disse indstillinger p\u00e5virker ikke de adgangskoder, som er angivet af brugerei dom\u00e6ner, som er konfigureret til at bruge ekstern godkendelse.
 Alert_ExternalPassword = Alle indstillinger for adgangskode er deaktiveret, fordi systemet er konfigureret til at bruge ekstern godkendelse.
 Alert_MailRetention = <b>Bem\u00e6rk:</b> Disse \u00e6ndringer tr\u00e6der ikke i kraft, hvis zimbraMailPurgeSleepInterval er deaktiveret enten i serveren eller den globale konfiguration.
@@ -705,9 +705,9 @@ Alert_Flush_Theme_Cache = <b>Bem\u00e6rk:</b> \
 
 Alert_Ngnix = <b>Bem\u00e6rk:</b> \u00c6ndringer af indstillinger kr\u00e6ver genstart af Ngnix, f\u00f8r de tr\u00e6der i kraft.
 
-HSM_ProcessStatus = HSM-session k\u00f8rer.<br>{0} BLOBs flyttet. {1} mailbokse behandlet. {2} mailbokse tilbage.
-HSM_StatusReport = Sidste HSM-session blev p\u00e5begyndt {0} og sluttede {1}
-HSM_InfoUnavailable = Oplysninger om den sidste HSM-session er ikke tilg\u00e6ngelige
+HSM_ProcessStatus = SM-session k\u00f8rer.<br>{0} BLOBs flyttet. {1} mailbokse behandlet. {2} mailbokse tilbage.
+HSM_StatusReport = Sidste SM-session blev p\u00e5begyndt {0} og sluttede {1}
+HSM_InfoUnavailable = Oplysninger om den sidste SM-session er ikke tilg\u00e6ngelige
 
 SERTBB_New_tt = Ny server
 SERTBB_Edit_tt = Rediger server
@@ -821,8 +821,8 @@ NAD_Tab_AUTH = Godkendelse
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Tjenester
-NAD_Tab_VolumeMgt = Enheder
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Lagerstyring
+NAD_Tab_HSM = Lagerstyring
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-adressebindinger
@@ -1833,7 +1833,7 @@ FAILED_MOVE_ALIAS = Kunne ikke flytte alias
 FAILED_REINDEX = Genindeksering mislykkedes. Fejlkode{0}
 FAILED_REINDEX_DETAILS = Detaljer:
 
-FAILED_HSM = HSM-session mislykkedes. Fejlkode{0}
+FAILED_HSM = SM-session mislykkedes. Fejlkode{0}
 FAILED_HSM_DETAILS = Detaljer:
 
 ERROR_CODE = Fejlkode:
