--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -634,11 +634,11 @@ DLTBB_Delete_tt = Verteiler l\u00f6schen
 DLTBB_Edit_tt = Verteiler bearbeiten
 DLTBB_Cancel_tt = Erstellung des Verteilers abbrechen
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM-Dialogfeld f\u00fcr neue HSM-Sitzung \u00f6ffnen
-HSM_Title = HSM
-HSM_Server_tt = Durch das Schlie\u00dfen dieses Fensters wird die HSM-Sitzung nicht abgebrochen. Wenn Sie den Status der HSM-Sitzung pr\u00fcfen m\u00f6chten, k\u00f6nnen Sie dieses Fenster mit der Schaltfl\u00e4che \u201eHSM\u201c in der Symbolleiste wieder \u00f6ffnen.
-HSM_COMPONENT_UNAVAILABLE = Die serverseitige HSM-Komponente ist nicht installiert.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM-Dialogfeld f\u00fcr neue SM-Sitzung \u00f6ffnen
+HSM_Title = SM
+HSM_Server_tt = Durch das Schlie\u00dfen dieses Fensters wird die SM-Sitzung nicht abgebrochen. Wenn Sie den Status der SM-Sitzung pr\u00fcfen m\u00f6chten, k\u00f6nnen Sie dieses Fenster mit der Schaltfl\u00e4che \u201eSM\u201c in der Symbolleiste wieder \u00f6ffnen.
+HSM_COMPONENT_UNAVAILABLE = Die serverseitige SM-Komponente ist nicht installiert.
 
 STATUSTBB_Failover = Ausfallsicherung
 STATUSTBB_Failover_tt = Ausfallsicherungsserver
@@ -695,7 +695,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>Hinweis:</b> \
 	Ge\u00e4nderte Einstellungen werden erst nach einem Neustart von amavisd wirksam.
-Alert_HSM = <b>Hinweis:</b> Mit der Schaltfl\u00e4che \u201eHSM-Sitzung starten\u201c k\u00f6nnen Sie eine HSM-Sitzung auch manuell einleiten. HSM-Sitzungen k\u00f6nnen auch auf Servern mit Cronjobs geplant werden. <br>
+Alert_HSM = <b>Hinweis:</b> Mit der Schaltfl\u00e4che \u201eSM-Sitzung starten\u201c k\u00f6nnen Sie eine SM-Sitzung auch manuell einleiten. SM-Sitzungen k\u00f6nnen auch auf Servern mit Cronjobs geplant werden. <br>
 Alert_InternalPassword = <b>Hinweis:</b> Diese Einstellungen haben auf die benutzerdefinierten Passw\u00f6rter in Domains, die zur Verwendung externer Authentifizierung konfiguriert wurden, keinen Einfluss.
 Alert_ExternalPassword = Alle Passwort-Einstellungen werden deaktiviert, weil das System f\u00fcr \
                  die Verwendung einer externen Authentifizierung konfiguriert ist.
@@ -714,9 +714,9 @@ Alert_Flush_Theme_Cache = <b>Hinweis:</b> \
 
 Alert_Ngnix = <b>Hinweis:</b> Die ge\u00e4nderten Einstellungen werden erst nach einem Neustart von Ngnix wirksam.
 
-HSM_ProcessStatus = HSM-Sitzung l\u00e4uft.<br>{0} Blobs wurden verschoben. {1} Mailboxen wurden verarbeitet. Noch {2} Mailboxen zu verarbeiten.
-HSM_StatusReport = Die letzte HSM-Sitzung wurde am {0} gestartet und am {1} beendet.
-HSM_InfoUnavailable = Keine Informationen \u00fcber die letzte HSM-Sitzung verf\u00fcgbar
+HSM_ProcessStatus = SM-Sitzung l\u00e4uft.<br>{0} Blobs wurden verschoben. {1} Mailboxen wurden verarbeitet. Noch {2} Mailboxen zu verarbeiten.
+HSM_StatusReport = Die letzte SM-Sitzung wurde am {0} gestartet und am {1} beendet.
+HSM_InfoUnavailable = Keine Informationen \u00fcber die letzte SM-Sitzung verf\u00fcgbar
 
 SERTBB_New_tt = Neuer Server
 SERTBB_Edit_tt = Server bearbeiten
@@ -830,8 +830,8 @@ NAD_Tab_AUTH = Authentifizierung
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Dienste
-NAD_Tab_VolumeMgt = Datentr\u00e4ger
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Speicherverwaltung
+NAD_Tab_HSM = Speicherverwaltung
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-Adressbindungen
@@ -1849,7 +1849,7 @@ FAILED_MOVE_ALIAS = Alias konnte nicht verschoben werden
 FAILED_REINDEX = Neuindizierung fehlgeschlagen. Fehlercode {0}
 FAILED_REINDEX_DETAILS = Details:
 
-FAILED_HSM = HSM-Sitzung fehlgeschlagen. Fehlercode {0}
+FAILED_HSM = SM-Sitzung fehlgeschlagen. Fehlercode {0}
 FAILED_HSM_DETAILS = Details:
 
 ERROR_CODE = Fehlercode:
