--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -842,8 +842,8 @@ NAD_Tab_AUTH = Authentication
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Services
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage management
+NAD_Tab_HSM = Storage management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP Address Bindings
