--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -820,8 +820,8 @@ NAD_Tab_AUTH = Authentication
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Services
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage management
+NAD_Tab_HSM = Storage management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP Address Bindings
@@ -1828,7 +1828,7 @@ FAILED_MOVE_ALIAS = Failed to move alias
 FAILED_REINDEX = Reindexing failed. Error code {0}
 FAILED_REINDEX_DETAILS = Details:
 
-FAILED_HSM = HSM Session failed. Error code {0}
+FAILED_HSM = SM Session failed. Error code {0}
 FAILED_HSM_DETAILS = Details:
 
 ERROR_CODE = Error code:
