--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -635,11 +635,11 @@ DLTBB_Delete_tt = Eliminar lista de correo
 DLTBB_Edit_tt = Editar lista de correo
 DLTBB_Cancel_tt = Cancelar creaci\u00f3n de lista de correo
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Abrir cuadro de di\u00e1logo de HSM para iniciar una sesi\u00f3n de HSM
-HSM_Title = HSM
-HSM_Server_tt = Al cerrar este cuadro de di\u00e1logo no se cancelar\u00e1 la sesi\u00f3n HSM. Para comprobar el estado de la sesi\u00f3n HSM, vuelve a este cuadro de di\u00e1logo haciendo clic en el bot\u00f3n HSM de la barra de herramientas.
-HSM_COMPONENT_UNAVAILABLE = El componente HSM no est\u00e1 instalado en el servidor.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Abrir cuadro de di\u00e1logo de SM para iniciar una sesi\u00f3n de SM
+HSM_Title = SM
+HSM_Server_tt = Al cerrar este cuadro de di\u00e1logo no se cancelar\u00e1 la sesi\u00f3n SM. Para comprobar el estado de la sesi\u00f3n SM, vuelve a este cuadro de di\u00e1logo haciendo clic en el bot\u00f3n SM de la barra de herramientas.
+HSM_COMPONENT_UNAVAILABLE = El componente SM no est\u00e1 instalado en el servidor.
 
 STATUSTBB_Failover = Recuperaci\u00f3n tras fallos
 STATUSTBB_Failover_tt = Servidor de recuperaci\u00f3n tras fallos
@@ -699,7 +699,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>Nota:</b> \
 	Para que los cambios en la configuraci\u00f3n surtan efecto, es necesario reiniciar amavisd.
-Alert_HSM = <b>Nota:</b> Puedes iniciar una sesi\u00f3n HSM manualmente pulsando el bot\u00f3n \u201cIniciar sesi\u00f3n HSM\u201d. Las sesiones HSM pueden programarse tambi\u00e9n en los servidores mediante tareas cron. <br>
+Alert_HSM = <b>Nota:</b> Puedes iniciar una sesi\u00f3n SM manualmente pulsando el bot\u00f3n \u201cIniciar sesi\u00f3n SM\u201d. Las sesiones SM pueden programarse tambi\u00e9n en los servidores mediante tareas cron. <br>
 Alert_InternalPassword = <b>Nota:</b> Estos par\u00e1metros no afectan a las contrase\u00f1as configuradas por los usuarios de dominios configurados para usar la autenticaci\u00f3n externa.
 Alert_ExternalPassword = Todos los ajustes de contrase\u00f1a est\u00e1n desactivados debido a que el sistema est\u00e1 configurado \
                 para utilizar la autenticaci\u00f3n externa.
@@ -718,9 +718,9 @@ Alert_Flush_Theme_Cache = <b>Nota:</b> \
 
 Alert_Ngnix = <b>Nota:</b> Para que los cambios en la configuraci\u00f3n surtan efecto, es necesario reiniciar Ngnix.
 
-HSM_ProcessStatus = Se est\u00e1 ejecutando la sesi\u00f3n HSM.<br>{0} blobs movidos. {1} buzones procesados. {2} buzones pendientes.
-HSM_StatusReport = La \u00faltima sesi\u00f3n de HSM se inici\u00f3 el {0} y termin\u00f3 el {1}
-HSM_InfoUnavailable = No hay datos disponibles sobre la \u00faltima sesi\u00f3n HSM
+HSM_ProcessStatus = Se est\u00e1 ejecutando la sesi\u00f3n SM.<br>{0} blobs movidos. {1} buzones procesados. {2} buzones pendientes.
+HSM_StatusReport = La \u00faltima sesi\u00f3n de SM se inici\u00f3 el {0} y termin\u00f3 el {1}
+HSM_InfoUnavailable = No hay datos disponibles sobre la \u00faltima sesi\u00f3n SM
 
 SERTBB_New_tt = Nuevo servidor
 SERTBB_Edit_tt = Editar servidor
@@ -834,8 +834,8 @@ NAD_Tab_AUTH = Autenticaci\u00f3n
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Servicios
-NAD_Tab_VolumeMgt = Vol\u00famenes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Administraci\u00f3n de almacenamiento
+NAD_Tab_HSM = Administraci\u00f3n de almacenamiento
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = V\u00ednculos de direcciones IP
@@ -1858,7 +1858,7 @@ FAILED_MOVE_ALIAS = Fallo al mover el alias
 FAILED_REINDEX = Fallo en el reindizado. C\u00f3digo de error {0}
 FAILED_REINDEX_DETAILS = Detalles:
 
-FAILED_HSM = Fallo en la sesi\u00f3n HSM. C\u00f3digo de error {0}
+FAILED_HSM = Fallo en la sesi\u00f3n SM. C\u00f3digo de error {0}
 FAILED_HSM_DETAILS = Detalles:
 
 ERROR_CODE = C\u00f3digo de error:
