--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -635,13 +635,13 @@ DLTBB_Delete_tt = Editatu banaketa-zerrenda
 DLTBB_Edit_tt = Editatu kontaktuen zerrenda
 DLTBB_Cancel_tt = Ezabatu banaketa-zerrenda
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Ireki HSMren elkarrizketa-koadroa HSMren saio bat hasteko
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Ireki SMren elkarrizketa-koadroa SMren saio bat hasteko
+HSM_Title = SM
 HSM_Server_tt = \
-	Elkarrizketa-koadro hau ixtean ez da bertan behera utziko HSM saioa. \
-	HSM saioaren egoera egiaztatzeko, egin klik tresna-barrako HSM botoian eta berreskuratu elkarrizketa-koadro hori.
-HSM_COMPONENT_UNAVAILABLE = HSM osagaia ez dago instalatuta zerbitzarian.
+	Elkarrizketa-koadro hau ixtean ez da bertan behera utziko SM saioa. \
+	SM saioaren egoera egiaztatzeko, egin klik tresna-barrako SM botoian eta berreskuratu elkarrizketa-koadro hori.
+HSM_COMPONENT_UNAVAILABLE = SM osagaia ez dago instalatuta zerbitzarian.
 
 STATUSTBB_Failover = Hutsegiteen ondoren leheneratzea
 STATUSTBB_Failover_tt = Hutsegiteen ondoren leheneratzeko zerbitzaria
@@ -703,8 +703,8 @@ Alert_AmavisdRestart = \
 	Ezarpenak aldatu eta aplikatzeko, amavisd berrabiarazi behar da.
 Alert_HSM = \
 	<b>Oharra:</b> \
-	HSM saio bat eskuz abiarazteko, sakatu "Hasi HSM saioa" botoia. \
-	HSM saioak cron job-en bitartez ere programa daitezke  zerbitzarietan. <br> \
+	SM saio bat eskuz abiarazteko, sakatu "Hasi SM saioa" botoia. \
+	SM saioak cron job-en bitartez ere programa daitezke  zerbitzarietan. <br> \
 
 Alert_InternalPassword = <b>Oharra:</b> Ezarpen horiek ez diete eragiten erabiltzaileek kanpoko autentifikazioa \
 erabiltzeko konfiguratu dituzten domeinuen pasahitzei.
@@ -725,9 +725,9 @@ Alert_Flush_Theme_Cache = <b>Oharra:</b> \
 
 Alert_Ngnix = <b>Oharra:</b> Ezarpenak aldatu eta aplikatzeko, Ngnix berrabiarazi behar da.
 
-HSM_ProcessStatus = HSM saioa abian dago.<br>{0} blob mugitu dira. {1} postontzi prozesatu dira. {2} postontzi falta dira.
-HSM_StatusReport = HSMren azken saioa {0}(e/a)n hasi eta (e/a)n amaitu zen {1}
-HSM_InfoUnavailable = Ez dago datu eskuragarririk azken HSM saioari buruz
+HSM_ProcessStatus = SM saioa abian dago.<br>{0} blob mugitu dira. {1} postontzi prozesatu dira. {2} postontzi falta dira.
+HSM_StatusReport = SMren azken saioa {0}(e/a)n hasi eta (e/a)n amaitu zen {1}
+HSM_InfoUnavailable = Ez dago datu eskuragarririk azken SM saioari buruz
 
 SERTBB_New_tt = Zerbitzari berria
 SERTBB_Edit_tt = Editatu zerbitzaria
@@ -843,8 +843,8 @@ NAD_Tab_AUTH = Autentifikazioa
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Zerbitzuak
-NAD_Tab_VolumeMgt = Bolumenak
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Biltegiratze kudeaketa
+NAD_Tab_HSM = Biltegiratze kudeaketa
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP helbideen loturak
@@ -1873,7 +1873,7 @@ FAILED_MOVE_ALIAS = Hutsegitea ezizena mugitzean
 FAILED_REINDEX = Hutsegitea berrindizatzean. {0} errore-kodea
 FAILED_REINDEX_DETAILS = Xehetasunak:
 
-FAILED_HSM = Hutsegitea HSM saioan. {0} errore-kodea
+FAILED_HSM = Hutsegitea SM saioan. {0} errore-kodea
 FAILED_HSM_DETAILS = Xehetasunak:
 
 ERROR_CODE = Errore-kodea:
