--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = Terjeszt\u00e9si lista t\u00f6rl\u00e9se
 DLTBB_Edit_tt = Terjeszt\u00e9si lista szerkeszt\u00e9se
 DLTBB_Cancel_tt = Terjeszt\u00e9si lista l\u00e9trehoz\u00e1s\u00e1nak megszak\u00edt\u00e1sa
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM p\u00e1rbesz\u00e9dpanel megnyit\u00e1sa a HSM munkamenet elind\u00edt\u00e1s\u00e1hoz
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM p\u00e1rbesz\u00e9dpanel megnyit\u00e1sa a SM munkamenet elind\u00edt\u00e1s\u00e1hoz
+HSM_Title = SM
 HSM_Server_tt = \
-	Ennek a p\u00e1rbesz\u00e9dpanelnek a bez\u00e1r\u00e1sa nem szak\u00edtja meg a HSM-munkamenetet. \
-	A HSM-munkamenet \u00e1llapot\u00e1nak ellen\u0151rz\u00e9s\u00e9hez az eszk\u00f6zt\u00e1ron l\u00e9v\u0151 HSM gombbal \u00fajra megjelen\u00edtheti ezt a p\u00e1rbesz\u00e9dpanelt.
-HSM_COMPONENT_UNAVAILABLE = A kiszolg\u00e1l\u00f3oldali HSM-\u00f6sszetev\u0151 nincs telep\u00edtve.
+	Ennek a p\u00e1rbesz\u00e9dpanelnek a bez\u00e1r\u00e1sa nem szak\u00edtja meg a SM-munkamenetet. \
+	A SM-munkamenet \u00e1llapot\u00e1nak ellen\u0151rz\u00e9s\u00e9hez az eszk\u00f6zt\u00e1ron l\u00e9v\u0151 SM gombbal \u00fajra megjelen\u00edtheti ezt a p\u00e1rbesz\u00e9dpanelt.
+HSM_COMPONENT_UNAVAILABLE = A kiszolg\u00e1l\u00f3oldali SM-\u00f6sszetev\u0151 nincs telep\u00edtve.
 
 STATUSTBB_Failover = Feladat\u00e1tv\u00e9tel
 STATUSTBB_Failover_tt = Feladat\u00e1tv\u00e9teli kiszolg\u00e1l\u00f3
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	A be\u00e1ll\u00edt\u00e1sok v\u00e1ltoz\u00e1sai csak az amavisd \u00fajraind\u00edt\u00e1sa ut\u00e1n l\u00e9pnek \u00e9letbe.
 Alert_HSM = \
 	<b>Megjegyz\u00e9s:</b> \
-	A HSM-munkamenet manu\u00e1lisan a \u201eHSM-munkamenet ind\u00edt\u00e1sa\u201d gombra kattintva ind\u00edthat\u00f3 el. \
-	A HSM-munkamenetek a kiszolg\u00e1l\u00f3kon is lehetnek \u00fctemezve cron-feladatok r\u00e9v\u00e9n. <br> \
+	A SM-munkamenet manu\u00e1lisan a \u201eSM-munkamenet ind\u00edt\u00e1sa\u201d gombra kattintva ind\u00edthat\u00f3 el. \
+	A SM-munkamenetek a kiszolg\u00e1l\u00f3kon is lehetnek \u00fctemezve cron-feladatok r\u00e9v\u00e9n. <br> \
 
 Alert_InternalPassword = <b>Megjegyz\u00e9s:</b> Ezek a be\u00e1ll\u00edt\u00e1sok nem befoly\u00e1solj\u00e1k azokat a jelszavakat, amelyeket \
 		a felhaszn\u00e1l\u00f3k k\u00fcls\u0151 hiteles\u00edt\u00e9s haszn\u00e1lat\u00e1ra konfigur\u00e1lt tartom\u00e1nyokban \u00e1ll\u00edtottak be.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>Note:</b> \
 
 Alert_Ngnix = <b>Megjegyz\u00e9s:</b> A be\u00e1ll\u00edt\u00e1sok m\u00f3dos\u00edt\u00e1sai csak az Ngnix \u00fajraind\u00edt\u00e1sa ut\u00e1n l\u00e9pnek \u00e9letbe.
 
-HSM_ProcessStatus = A HSM-munkamenet fut.<br>{0} blob \u00e1thelyezve. {1} postafi\u00f3k feldolgozva. {2} postafi\u00f3k van h\u00e1tra.
-HSM_StatusReport = A legut\u00f3bbi HSM-munkamenet ind\u00edt\u00e1sa: {0}; \u00e9s befejez\u00e9se: {1}
-HSM_InfoUnavailable = A legut\u00f3bbi HSM-munkamenetre vonatkoz\u00f3 adatok nem \u00e9rhet\u0151k el
+HSM_ProcessStatus = A SM-munkamenet fut.<br>{0} blob \u00e1thelyezve. {1} postafi\u00f3k feldolgozva. {2} postafi\u00f3k van h\u00e1tra.
+HSM_StatusReport = A legut\u00f3bbi SM-munkamenet ind\u00edt\u00e1sa: {0}; \u00e9s befejez\u00e9se: {1}
+HSM_InfoUnavailable = A legut\u00f3bbi SM-munkamenetre vonatkoz\u00f3 adatok nem \u00e9rhet\u0151k el
 
 SERTBB_New_tt = \u00daj kiszolg\u00e1l\u00f3
 SERTBB_Edit_tt = Kiszolg\u00e1l\u00f3 szerkeszt\u00e9se
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = Hiteles\u00edt\u00e9s
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Szolg\u00e1ltat\u00e1sok
-NAD_Tab_VolumeMgt = K\u00f6tetek
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = T\u00e1rol\u00e1skezel\u00e9s
+NAD_Tab_HSM = T\u00e1rol\u00e1skezel\u00e9s
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-c\u00edm k\u00f6t\u00e9sei
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = Az alias \u00e1thelyez\u00e9se nem siker\u00fclt
 FAILED_REINDEX = Az \u00fajraindexel\u00e9s nem siker\u00fclt. Hibak\u00f3d: {0}
 FAILED_REINDEX_DETAILS = R\u00e9szletek:
 
-FAILED_HSM = A HSM-munkamenet hib\u00e1t jelzett. Hibak\u00f3d: {0}
+FAILED_HSM = A SM-munkamenet hib\u00e1t jelzett. Hibak\u00f3d: {0}
 FAILED_HSM_DETAILS = R\u00e9szletek:
 
 ERROR_CODE = Hibak\u00f3d:
