--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -630,11 +630,11 @@ DLTBB_Delete_tt = Elimina la lista di distribuzione
 DLTBB_Edit_tt = Modifica la lista di distribuzione
 DLTBB_Cancel_tt = Annulla la creazione della lista di distribuzione
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Apre la finestra di dialogo HSM per iniziare una sessione HSM
-HSM_Title = HSM
-HSM_Server_tt = Chiudendo questa finestra di dialogo non si interrompe la sessione HSM. Per controllare lo stato della sessione HSM, riapri la finestra di dialogo cliccando sul pulsante HSM nella barra degli strumenti.
-HSM_COMPONENT_UNAVAILABLE = Il componente HSM dal lato server non \u00e8 stato installato.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Apre la finestra di dialogo SM per iniziare una sessione SM
+HSM_Title = SM
+HSM_Server_tt = Chiudendo questa finestra di dialogo non si interrompe la sessione SM. Per controllare lo stato della sessione SM, riapri la finestra di dialogo cliccando sul pulsante SM nella barra degli strumenti.
+HSM_COMPONENT_UNAVAILABLE = Il componente SM dal lato server non \u00e8 stato installato.
 
 STATUSTBB_Failover = Failover
 STATUSTBB_Failover_tt = Server di failover
@@ -689,7 +689,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>Avviso:</b> le modifiche a queste impostazioni richiedono il riavvio del proxy per avere effetto.
 Alert_AmavisdRestart = <b>Nota:</b> le modifiche alle impostazioni diventano effettive solo dopo il riavvio di amavisd.
-Alert_HSM = <b>Nota -</b> Puoi avviare manualmente una sessione HSM premendo il pulsante \u201cInizia sessione HSM\u201d. Le sessioni HSM si possono anche programmare sui server tramite i cron job (ambiente Unix). <br>
+Alert_HSM = <b>Nota -</b> Puoi avviare manualmente una sessione SM premendo il pulsante \u201cInizia sessione SM\u201d. Le sessioni SM si possono anche programmare sui server tramite i cron job (ambiente Unix). <br>
 Alert_InternalPassword = <b>Nota -</b> Queste impostazioni non influiscono sulle password impostate dagli utenti in domini configurati per l\u2019uso dell\u2019autenticazione esterna.
 Alert_ExternalPassword = Tutte le impostazioni della password vengono disattivate perch\u00e9 il sistema \u00e8 configurato per l\u2019utilizzo dell\u2019autenticazione esterna.
 Alert_MailRetention = <b>Nota:</b> queste impostazioni non saranno effettive se zimbraMailPurgeSleepInterval \u00e8 disattivato sul server o sulla configurazione globale.
@@ -705,9 +705,9 @@ Alert_Flush_Theme_Cache = <b>Nota:</b> \
 
 Alert_Ngnix = <b>Nota:</b> le modifiche alle impostazioni diventano effettive solo dopo aver riavviato Ngnix.
 
-HSM_ProcessStatus = La sessione HSM \u00e8 in esecuzione.<br>{0} blob spostati. {1} caselle di posta elaborate. {2} caselle di posta rimaste.
-HSM_StatusReport = L\u2019ultima sessione HSM \u00e8 stata iniziata il {0} ed \u00e8 terminata il {1}
-HSM_InfoUnavailable = Informazioni sull\u2019ultima sessione HSM non disponibili
+HSM_ProcessStatus = La sessione SM \u00e8 in esecuzione.<br>{0} blob spostati. {1} caselle di posta elaborate. {2} caselle di posta rimaste.
+HSM_StatusReport = L\u2019ultima sessione SM \u00e8 stata iniziata il {0} ed \u00e8 terminata il {1}
+HSM_InfoUnavailable = Informazioni sull\u2019ultima sessione SM non disponibili
 
 SERTBB_New_tt = Nuovo server
 SERTBB_Edit_tt = Modifica il server
@@ -821,8 +821,8 @@ NAD_Tab_AUTH = Autenticazione
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Servizi
-NAD_Tab_VolumeMgt = Volumi
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Gestione dell\u0027archiviazione
+NAD_Tab_HSM = Gestione dell\u0027archiviazione
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = Binding indirizzi IP
@@ -1833,7 +1833,7 @@ FAILED_MOVE_ALIAS = Spostamento alias non riuscito
 FAILED_REINDEX = Reindicizzazione non riuscita. Codice di errore {0}
 FAILED_REINDEX_DETAILS = Dettagli:
 
-FAILED_HSM = Sessione HSM non riuscita. Codice di errore {0}
+FAILED_HSM = Sessione SM non riuscita. Codice di errore {0}
 FAILED_HSM_DETAILS = Dettagli:
 
 ERROR_CODE = Codice di errore:
