--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = \u05de\u05d7\u05e7 \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4
 DLTBB_Edit_tt = \u05e2\u05e8\u05d5\u05da \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4\u05d5\u05e6\u05d4
 DLTBB_Cancel_tt = \u05d1\u05d9\u05d8\u05d5\u05dc \u05d9\u05e6\u05d9\u05e8\u05d4 \u05e9\u05dc \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4\u05d5\u05e6\u05d4
 
-SRVTBB_HSM = HSM\u200f
-SRVTBB_HSM_tt = \u05e4\u05ea\u05d7 \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 HSM \u05db\u05d3\u05d9 \u05dc\u05d4\u05ea\u05d7\u05d9\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM\u200f
-HSM_Title = HSM\u200f
+SRVTBB_HSM = SM\u200f
+SRVTBB_HSM_tt = \u05e4\u05ea\u05d7 \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 SM \u05db\u05d3\u05d9 \u05dc\u05d4\u05ea\u05d7\u05d9\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM\u200f
+HSM_Title = SM
 HSM_Server_tt = \
-	\u05e1\u05d2\u05d9\u05e8\u05ea \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 \u05d6\u05d5 \u05dc\u05d0 \u05ea\u05e1\u05d2\u05d5\u05e8 \u05d0\u05ea \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea \u05d4-HSM\u200f. \
-	\u05db\u05d3\u05d9 \u05dc\u05d1\u05d3\u05d5\u05e7 \u05d0\u05ea \u05e1\u05d8\u05d8\u05d5\u05e1 \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea \u05d4-HSM, \u05e4\u05ea\u05d7 \u05de\u05d7\u05d3\u05e9 \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 \u05d6\u05d5 \u05e2\u05dc-\u05d9\u05d3\u05d9 \u05dc\u05d7\u05d9\u05e6\u05d4 \u05e2\u05dc \u05dc\u05d7\u05e6\u05df HSM \u05d1\u05e1\u05e8\u05d2\u05dc \u05d4\u05db\u05dc\u05d9\u05dd.
-HSM_COMPONENT_UNAVAILABLE = \u05e8\u05db\u05d9\u05d1 \u05d4-HSM \u05e9\u05dc \u05e6\u05d3 \u05d4\u05e9\u05e8\u05ea \u05d0\u05d9\u05e0\u05d5 \u05de\u05d5\u05ea\u05e7\u05df.
+	\u05e1\u05d2\u05d9\u05e8\u05ea \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 \u05d6\u05d5 \u05dc\u05d0 \u05ea\u05e1\u05d2\u05d5\u05e8 \u05d0\u05ea \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea \u05d4-SM\u200f. \
+	\u05db\u05d3\u05d9 \u05dc\u05d1\u05d3\u05d5\u05e7 \u05d0\u05ea \u05e1\u05d8\u05d8\u05d5\u05e1 \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea \u05d4-SM, \u05e4\u05ea\u05d7 \u05de\u05d7\u05d3\u05e9 \u05ea\u05d9\u05d1\u05ea \u05d3\u05d5-\u05e9\u05d9\u05d7 \u05d6\u05d5 \u05e2\u05dc-\u05d9\u05d3\u05d9 \u05dc\u05d7\u05d9\u05e6\u05d4 \u05e2\u05dc \u05dc\u05d7\u05e6\u05df SM \u05d1\u05e1\u05e8\u05d2\u05dc \u05d4\u05db\u05dc\u05d9\u05dd.
+HSM_COMPONENT_UNAVAILABLE = \u05e8\u05db\u05d9\u05d1 \u05d4-SM \u05e9\u05dc \u05e6\u05d3 \u05d4\u05e9\u05e8\u05ea \u05d0\u05d9\u05e0\u05d5 \u05de\u05d5\u05ea\u05e7\u05df.
 
 STATUSTBB_Failover = \u05d1\u05e2\u05ea \u05db\u05e9\u05dc
 STATUSTBB_Failover_tt = \u05e9\u05e8\u05ea \u05d1\u05e2\u05ea \u05db\u05e9\u05dc
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	\u05db\u05d3\u05d9 \u05e9\u05d4\u05e9\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3, \u05d9\u05e9 \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05de\u05d7\u05d3\u05e9 \u05d0\u05ea \u05d4-amavisd\u200f.
 Alert_HSM = \
 	<b>\u05d4\u05e2\u05e8\u05d4:</b> \
-	\u05e0\u05d9\u05ea\u05df \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM \u05e2\u05dc-\u05d9\u05d3\u05d9 \u05dc\u05d7\u05d9\u05e6\u05d4 \u05e2\u05dc \u05d4\u05dc\u05d7\u05e6\u05df \u2018\u05d4\u05e4\u05e2\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM\u2019\u200f. \
-	\u05e0\u05d9\u05ea\u05df \u05d2\u05dd \u05dc\u05ea\u05d6\u05de\u05df \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM \u05d1\u05e9\u05e8\u05ea\u05d9\u05dd \u05d1\u05e2\u05d6\u05e8\u05ea \u05e9\u05d9\u05de\u05d5\u05e9 \u05d1- Cron\u200f. <br> \
+	\u05e0\u05d9\u05ea\u05df \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM \u05e2\u05dc-\u05d9\u05d3\u05d9 \u05dc\u05d7\u05d9\u05e6\u05d4 \u05e2\u05dc \u05d4\u05dc\u05d7\u05e6\u05df \u2018\u05d4\u05e4\u05e2\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM\u2019\u200f. \
+	\u05e0\u05d9\u05ea\u05df \u05d2\u05dd \u05dc\u05ea\u05d6\u05de\u05df \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM \u05d1\u05e9\u05e8\u05ea\u05d9\u05dd \u05d1\u05e2\u05d6\u05e8\u05ea \u05e9\u05d9\u05de\u05d5\u05e9 \u05d1- Cron\u200f. <br> \
 
 Alert_InternalPassword = <b>\u05d4\u05e2\u05e8\u05d4:</b> \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d0\u05dc\u05d5 \u05d0\u05d9\u05e0\u05df \u05de\u05e9\u05e4\u05d9\u05e2\u05d5\u05ea \u05e2\u05dc \u05d4\u05e1\u05d9\u05e1\u05de\u05d0\u05d5\u05ea \u05e9\u05d4\u05d5\u05d2\u05d3\u05e8\u05d5 \u05e2\u05dc-\u05d9\u05d3\u05d9 \u05de\u05e9\u05ea\u05de\u05e9\u05d9\u05dd \u05d1\u05ea\u05d7\u05d5\u05de\u05d9\u05dd \
 		\u05e9\u05d4\u05d5\u05d2\u05d3\u05e8\u05d5 \u05dc\u05d4\u05e9\u05ea\u05de\u05e9 \u05d1\u05d0\u05d9\u05de\u05d5\u05ea \u05d7\u05d9\u05e6\u05d5\u05e0\u05d9.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>\u05d4\u05e2\u05e8\u05d4:</b> \
 
 Alert_Ngnix = <b>\u05d4\u05e2\u05e8\u05d4:</b> \u05d9\u05e9 \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05de\u05d7\u05d3\u05e9 \u05d0\u05ea Ngnix \u05db\u05d3\u05d9 \u05e9\u05d4\u05e9\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3.
 
-HSM_ProcessStatus = \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM \u05e4\u05d5\u05e2\u05dc\u05ea.<br>{0} \u05d0\u05d5\u05d1\u05d9\u05d9\u05e7\u05d8\u05d9\u05dd \u05e9\u05dc blob \u05d4\u05d5\u05e2\u05d1\u05e8\u05d5. {1} \u05ea\u05d9\u05d1\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8 \u05e2\u05d1\u05e8\u05d5 \u05e2\u05d9\u05d1\u05d5\u05d3. {2} \u05ea\u05d9\u05d1\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8 \u05e0\u05d5\u05ea\u05e8\u05d5.
-HSM_StatusReport = \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM \u05d0\u05d7\u05e8\u05d5\u05e0\u05d4 \u05d4\u05d5\u05e4\u05e2\u05dc\u05d4 \u05d1-{0} \u05d5\u05d4\u05e1\u05ea\u05d9\u05d9\u05de\u05d4 \u05d1-{1}
-HSM_InfoUnavailable = \u05d0\u05d9\u05df \u05de\u05d9\u05d3\u05e2 \u05e2\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea HSM \u05d4\u05d0\u05d7\u05e8\u05d5\u05e0\u05d4
+HSM_ProcessStatus = \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM \u05e4\u05d5\u05e2\u05dc\u05ea.<br>{0} \u05d0\u05d5\u05d1\u05d9\u05d9\u05e7\u05d8\u05d9\u05dd \u05e9\u05dc blob \u05d4\u05d5\u05e2\u05d1\u05e8\u05d5. {1} \u05ea\u05d9\u05d1\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8 \u05e2\u05d1\u05e8\u05d5 \u05e2\u05d9\u05d1\u05d5\u05d3. {2} \u05ea\u05d9\u05d1\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8 \u05e0\u05d5\u05ea\u05e8\u05d5.
+HSM_StatusReport = \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM \u05d0\u05d7\u05e8\u05d5\u05e0\u05d4 \u05d4\u05d5\u05e4\u05e2\u05dc\u05d4 \u05d1-{0} \u05d5\u05d4\u05e1\u05ea\u05d9\u05d9\u05de\u05d4 \u05d1-{1}
+HSM_InfoUnavailable = \u05d0\u05d9\u05df \u05de\u05d9\u05d3\u05e2 \u05e2\u05dc \u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea SM \u05d4\u05d0\u05d7\u05e8\u05d5\u05e0\u05d4
 
 SERTBB_New_tt = \u05e9\u05e8\u05ea \u05d7\u05d3\u05e9
 SERTBB_Edit_tt = \u05e2\u05e8\u05d9\u05db\u05ea \u05e9\u05e8\u05ea
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = \u05d0\u05d9\u05de\u05d5\u05ea
 NAD_Tab_POP = POP\u200f
 NAD_Tab_IMAP = IMAP\u200f
 NAD_Tab_Services = \u05e9\u05d9\u05e8\u05d5\u05ea\u05d9\u05dd
-NAD_Tab_VolumeMgt = \u05d0\u05de\u05e6\u05e2\u05d9 \u05d0\u05d7\u05e1\u05d5\u05df
-NAD_Tab_HSM = HSM\u200f
+NAD_Tab_VolumeMgt = \u05e0\u05d9\u05d4\u05d5\u05dc \u05d0\u05d7\u05e1\u05d5\u05df
+NAD_Tab_HSM = \u05e0\u05d9\u05d4\u05d5\u05dc \u05d0\u05d7\u05e1\u05d5\u05df
 NAD_Tab_ASAV = AS/AV\u200f
 NAD_Tab_Proxy = Proxy\u200f
 NAD_Tab_Bind_IP = \u05d0\u05d9\u05d2\u05d5\u05d3\u05d9 \u05db\u05ea\u05d5\u05d1\u05ea IP\u200f
