--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = \u0ea5\u0ebb\u0e9a\u200b\u0ea5\u0eb2\u200b\u0e8d\u0e8a\u0eb7\u
 DLTBB_Edit_tt = \u0ec1\u0e81\u0ec9\u0ec4\u0e82\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0edc\u0ec8\u0eb2\u0e8d
 DLTBB_Cancel_tt = \u0e8d\u0ebb\u0e81\u200b\u0ec0\u0ea5\u0eb5\u0e81\u200b\u0e81\u0eb2\u0e99\u200b\u0eaa\u0ec9\u0eb2\u0e87\u200b\u0ea5\u0eb2\u0e8d\u200b\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0edc\u0ec8\u0eb2\u0e8d
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0e9b\u0ec8\u0ead\u0e87 HSM \u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u200b\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 HSM 
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0e9b\u0ec8\u0ead\u0e87 SM \u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u200b\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 SM 
+HSM_Title = SM
 HSM_Server_tt = \
-	\u0e9b\u0eb4\u0e94\u200b\u0e9b\u0ec8\u0ead\u0e87\u200b\u0e99\u0eb5\u0ec9\u0e88\u0eb0\u0e9a\u0ecd\u0ec8\u200b\u0e8d\u0ebb\u0e81\u200b\u0ec0\u0ea5\u0eb5\u0e81\u200b\u200b\u0ea7\u0eb2\u0ea5\u0eb0 HSM. \
-	\u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u0e81\u0ea7\u0e94\u0e81\u0eb2\u200b\u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u200b\u0e9e\u0eb2\u0e9a\u0e82\u0ead\u0e87\u200b\u0ea7\u0eb2\u0ea5\u0eb0 HSM, \u200b\u0e99\u0eb3\u200b\u0e9b\u0ec8\u0ead\u0e87\u200b\u0e99\u0eb5\u0ec9\u200b\u0e81\u0eb1\u0e9a\u200b\u0e84\u0eb7\u0e99 \u200b\u0ec2\u0e94\u0e8d\u0e81\u0eb2\u0e99\u200b\u0e81\u0ebb\u0e94\u0e97\u0eb5\u0ec8\u200b\u0e9b\u0eb8\u0ec8\u0ea1 HSM \u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99\u200b\u0ec1\u0e96\u0e9a\u200b\u0ec0\u0e84\u0eb7\u0ec8\u0ead\u0e87\u0ea1\u0eb7.
-HSM_COMPONENT_UNAVAILABLE = \u200b\u0e8d\u0eb1\u0e87\u200b\u0e9a\u0ecd\u0ec8\u200b\u0e97\u0eb1\u0e99\u200b\u0e95\u0eb4\u0e94\u200b\u0e95\u0eb1\u0ec9\u0e87\u0eaa\u0ec8\u0ea7\u0e99\u0e9b\u0eb0\u0e81\u0ead\u0e9a\u200b\u0ec0\u0e8a\u0eb5\u200b\u200b\u0ec0\u0ea7\u0eb5 HSM.
+	\u0e9b\u0eb4\u0e94\u200b\u0e9b\u0ec8\u0ead\u0e87\u200b\u0e99\u0eb5\u0ec9\u0e88\u0eb0\u0e9a\u0ecd\u0ec8\u200b\u0e8d\u0ebb\u0e81\u200b\u0ec0\u0ea5\u0eb5\u0e81\u200b\u200b\u0ea7\u0eb2\u0ea5\u0eb0 SM. \
+	\u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u0e81\u0ea7\u0e94\u0e81\u0eb2\u200b\u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u200b\u0e9e\u0eb2\u0e9a\u0e82\u0ead\u0e87\u200b\u0ea7\u0eb2\u0ea5\u0eb0 SM, \u200b\u0e99\u0eb3\u200b\u0e9b\u0ec8\u0ead\u0e87\u200b\u0e99\u0eb5\u0ec9\u200b\u0e81\u0eb1\u0e9a\u200b\u0e84\u0eb7\u0e99 \u200b\u0ec2\u0e94\u0e8d\u0e81\u0eb2\u0e99\u200b\u0e81\u0ebb\u0e94\u0e97\u0eb5\u0ec8\u200b\u0e9b\u0eb8\u0ec8\u0ea1 SM \u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99\u200b\u0ec1\u0e96\u0e9a\u200b\u0ec0\u0e84\u0eb7\u0ec8\u0ead\u0e87\u0ea1\u0eb7.
+HSM_COMPONENT_UNAVAILABLE = \u200b\u0e8d\u0eb1\u0e87\u200b\u0e9a\u0ecd\u0ec8\u200b\u0e97\u0eb1\u0e99\u200b\u0e95\u0eb4\u0e94\u200b\u0e95\u0eb1\u0ec9\u0e87\u0eaa\u0ec8\u0ea7\u0e99\u0e9b\u0eb0\u0e81\u0ead\u0e9a\u200b\u0ec0\u0e8a\u0eb5\u200b\u200b\u0ec0\u0ea7\u0eb5 SM.
 
 STATUSTBB_Failover = \u0ea5\u0ebb\u0ec9\u0ea1\u200b\u0ec0\u0eab\u0ebc\u0ea7
 STATUSTBB_Failover_tt = \u200b\u0ec0\u0e8a\u0eb5\u200b\u0ec0\u0ea7\u0eb5\u200b\u0ea5\u0ebb\u0ec9\u0ea1\u200b\u200b\u0ec0\u0eab\u0ebc\u0ea7
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	\u0e9b\u0ec8\u0ebd\u0e99\u200b\u0ec1\u0e9b\u0e87\u200b\u0e81\u0eb2\u0e99\u200b\u0e95\u0eb1\u0ec9\u0e87\u200b\u0e84\u0ec8\u0eb2\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u200b\u0ec1\u0ea5\u0ec8\u0e99\u0ea5\u0eb0\u0e9a\u0ebb\u0e9a amavisd \u0e84\u0eb7\u0e99\u200b\u0ec3\u0edd\u0ec8\u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u0ec3\u0eab\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e87\u0eb2\u0e99\u200b\u0ec4\u0e94\u0ec9.
 Alert_HSM = \
 	<b>\u0edd\u0eb2\u0e8d\u0ec0\u0eab\u0e94:</b> \
-	\u0e97\u0ec8\u0eb2\u0e99\u200b\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u0e95\u0ead\u0e99 HSM \u0e94\u0ec9\u0ea7\u0e8d\u200b\u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ead\u0e87\u200b\u0ec4\u0e94\u0ec9 \u0e94\u0ec9\u0ea7\u0e8d\u200b\u0e81\u0eb2\u0e99\u200b\u0e81\u0ebb\u0e94\u0e9b\u0eb8\u0ec8\u0ea1 "\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 HSM ". \
-	\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 HSM \u0e8d\u0eb1\u0e87\u200b\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u200b\u0e95\u0eb1\u0ec9\u0e87\u200b\u0ec0\u0ea7\u0ea5\u0eb2\u200b\u200b\u0ec4\u0e94\u0ec9\u200b\u0ec0\u0e97\u0eb4\u0e87\u200b\u0ec0\u0e8a\u0eb5\u200b\u0ec0\u0ea7\u0eb5\u200b\u0e9c\u0ec8\u0eb2\u0e99\u0ea7\u0ebd\u0e81 cron. <br> \
+	\u0e97\u0ec8\u0eb2\u0e99\u200b\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u0e95\u0ead\u0e99 SM \u0e94\u0ec9\u0ea7\u0e8d\u200b\u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ead\u0e87\u200b\u0ec4\u0e94\u0ec9 \u0e94\u0ec9\u0ea7\u0e8d\u200b\u0e81\u0eb2\u0e99\u200b\u0e81\u0ebb\u0e94\u0e9b\u0eb8\u0ec8\u0ea1 "\u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 SM ". \
+	\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 SM \u0e8d\u0eb1\u0e87\u200b\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u200b\u0e95\u0eb1\u0ec9\u0e87\u200b\u0ec0\u0ea7\u0ea5\u0eb2\u200b\u200b\u0ec4\u0e94\u0ec9\u200b\u0ec0\u0e97\u0eb4\u0e87\u200b\u0ec0\u0e8a\u0eb5\u200b\u0ec0\u0ea7\u0eb5\u200b\u0e9c\u0ec8\u0eb2\u0e99\u0ea7\u0ebd\u0e81 cron. <br> \
 
 Alert_InternalPassword = <b>\u0edd\u0eb2\u0e8d\u0ec0\u0eab\u0e94:</b> \u0e81\u0eb2\u0e99\u200b\u0e95\u0eb1\u0ec9\u0e87\u200b\u0e84\u0ec8\u0eb2\u200b\u0ec0\u0eab\u0ea5\u0ebb\u0ec8\u0eb2\u200b\u0e99\u0eb5\u0ec8\u200b\u0e9a\u0ecd\u0ec8\u200b\u0ea1\u0eb5\u200b\u0e9c\u0ebb\u0e99\u200b\u0e95\u0ecd\u0ec8\u200b\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0eaa\u0ec9\u0eb2\u0e87\u200b\u0ec2\u0e94\u0e8d\u200b\u0e9c\u0eb9\u0ec8\u200b\u200b\u0ec3\u0e8a\u0ec9\u200b\u0ec3\u0e99\u200b\u0ec2\u0e94\u200b\u0ec0\u0ea1\u0e99 \u0e97\u0eb5\u0ec8 \
 		\u0e81\u0eb3\u0e99\u0ebb\u0e94\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e81\u0ea7\u0e94\u200b\u0eaa\u0ead\u0e9a\u200b\u0e9e\u0eb2\u0e8d\u200b\u0e99\u0ead\u0e81.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>\u0edd\u0eb2\u0e8d\u0ec0\u0eab\u0e94:</b> \
 
 Alert_Ngnix = <b>\u0edd\u0eb2\u0e8d\u0ec0\u0eab\u0e94:</b> \u0e9b\u0ec8\u0ebd\u0e99\u200b\u0ec1\u0e9b\u0e87\u200b\u0e81\u0eb2\u0e99\u200b\u0e95\u0eb1\u0ec9\u0e87\u0e84\u0ec8\u0eb2 \u0e95\u0ec9\u0ead\u0e87\u200b\u200b\u0ec0\u0ea5\u0eb5\u0ec9\u0ea1\u0e95\u0ebb\u0ec9\u0e99 Ngnix \u0e84\u0eb7\u0e99\u200b\u0ec3\u0edd\u0ec8 \u200b\u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e87\u0eb2\u0e99\u200b\u0ec4\u0e94\u0ec9. 
 
-HSM_ProcessStatus = \u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 HSM \u0e81\u0eb3\u0ea5\u0eb1\u0e87\u200b\u0ec1\u0ea5\u0ec8\u0e99.<br>{0} \u0e88\u0eb8\u0e94\u200b\u0e94\u0ec8\u0eb2\u0e87\u200b\u0e96\u0eb7\u0e81\u200b\u0ea5\u0ebb\u0e9a\u0ead\u0ead\u0e81. {1} \u0e81\u0ec8\u0ead\u0e87\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u200b\u0ec4\u0e94\u0ec9\u200b\u0eae\u0eb1\u0e9a\u200b\u0e81\u0eb2\u0e99\u200b\u0ec1\u0e81\u0ec9\u200b\u0ec4\u0e82\u200b. {2} \u0e81\u0ec8\u0ead\u0e87\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u200b\u0e97\u0eb5\u0ec8\u200b\u0e8d\u0eb1\u0e87\u200b\u0ec0\u0eab\u0ebc\u0eb7\u0ead.
-HSM_StatusReport = \u200b\u200b\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 HSM \u0eab\u0ebc\u0ec9\u0eb2\u0eab\u0ebc\u0ec9\u0eb2\u200b\u0eaa\u0eb8\u0e94 \u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u200b\u0ec3\u0e99 {0}  \u200b\u0ec1\u0ea5\u0eb0 \u0eaa\u0eb4\u0ec9\u0e99\u200b\u0eaa\u0eb8\u0e94\u200b\u0ec3\u0e99 {1}
-HSM_InfoUnavailable = \u0e82\u0ecd\u0ec9\u200b\u0ea1\u0eb9\u0e99\u200b\u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99\u200b\u0ea7\u0eb2\u0ea5\u0eb0 HSM \u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0ea1\u0eb2\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e9a\u0ecd\u0ec8\u200b\u0ec4\u0e94\u0ec9 
+HSM_ProcessStatus = \u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 SM \u0e81\u0eb3\u0ea5\u0eb1\u0e87\u200b\u0ec1\u0ea5\u0ec8\u0e99.<br>{0} \u0e88\u0eb8\u0e94\u200b\u0e94\u0ec8\u0eb2\u0e87\u200b\u0e96\u0eb7\u0e81\u200b\u0ea5\u0ebb\u0e9a\u0ead\u0ead\u0e81. {1} \u0e81\u0ec8\u0ead\u0e87\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u200b\u0ec4\u0e94\u0ec9\u200b\u0eae\u0eb1\u0e9a\u200b\u0e81\u0eb2\u0e99\u200b\u0ec1\u0e81\u0ec9\u200b\u0ec4\u0e82\u200b. {2} \u0e81\u0ec8\u0ead\u0e87\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u200b\u0e97\u0eb5\u0ec8\u200b\u0e8d\u0eb1\u0e87\u200b\u0ec0\u0eab\u0ebc\u0eb7\u0ead.
+HSM_StatusReport = \u200b\u200b\u0ec0\u0e8a\u200b\u0eaa\u0e8a\u0eb1\u0ec8\u0e99 SM \u0eab\u0ebc\u0ec9\u0eb2\u0eab\u0ebc\u0ec9\u0eb2\u200b\u0eaa\u0eb8\u0e94 \u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u200b\u0ec3\u0e99 {0}  \u200b\u0ec1\u0ea5\u0eb0 \u0eaa\u0eb4\u0ec9\u0e99\u200b\u0eaa\u0eb8\u0e94\u200b\u0ec3\u0e99 {1}
+HSM_InfoUnavailable = \u0e82\u0ecd\u0ec9\u200b\u0ea1\u0eb9\u0e99\u200b\u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99\u200b\u0ea7\u0eb2\u0ea5\u0eb0 SM \u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0ea1\u0eb2\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e9a\u0ecd\u0ec8\u200b\u0ec4\u0e94\u0ec9 
 
 SERTBB_New_tt = \u200b\u0ec0\u0e8a\u0eb5\u200b\u0ec0\u0ea7\u0eb5\u200b\u0ec3\u0edd\u0ec8
 SERTBB_Edit_tt = \u200b\u0ec1\u0e81\u0ec9\u200b\u0ec4\u200b\u0e82\u200b\u0ec0\u0e8a\u0eb5\u200b\u0ec0\u0ea7\u0eb5
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = \u0e81\u0eb2\u0e99\u0ea2\u0eb1\u0ec9\u0e87\u0ea2\u0eb7\u0e99\u0e9
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u0e81\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ea5\u0eb4\u0e81\u0eb2\u0e99
-NAD_Tab_VolumeMgt = \u0e9b\u0eb0\u0ea5\u0eb4\u0ea1\u0eb2\u0e99\u200b\u0e9a\u0eb1\u0e99\u0e88\u0eb8
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u0e81\u0eb2\u0e99\u0e84\u0eb8\u0ec9\u0ea1\u0e84\u0ead\u0e87\u0e81\u0eb2\u0e99\u0ec0\u0e81\u0eb1\u0e9a\u0eae\u0eb1\u0e81\u0eaa\u0eb2
+NAD_Tab_HSM = \u0e81\u0eb2\u0e99\u0e84\u0eb8\u0ec9\u0ea1\u0e84\u0ead\u0e87\u0e81\u0eb2\u0e99\u0ec0\u0e81\u0eb1\u0e9a\u0eae\u0eb1\u0e81\u0eaa\u0eb2
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = \u200b \u0e9e\u0ea3\u0eb1\u0ead\u0e81\u0e8a\u0eb5\u0ec9
 NAD_Tab_Bind_IP = \u0e81\u0eb2\u0e99\u200b\u0ec0\u0e8a\u0eb7\u0ec8\u0ead\u200b\u0ea1\u0e95\u0ecd\u0ec8\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8 IP
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = \u0ea5\u0ebb\u0ec9\u0ea1\u200b\u0ec0\u0eab\u200b\u0ea5\u0ea7
 FAILED_REINDEX = \u0ea5\u0ebb\u0ec9\u0ea1\u200b\u200b\u200b\u0ec0\u0eab\u0ea5\u0ea7\u200b\u0ec3\u0e99\u200b\u0e81\u0eb2\u0e99\u200b\u0ec0\u0eae\u0eb1\u0e94\u200b\u0e94\u0eb1\u0e94\u0e8a\u0eb0\u0e99\u0eb5\u200b\u0ec3\u0eab\u0ea1\u0ec8. \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0eb4\u0e94\u0e9e\u0eb2\u0e94 {0}
 FAILED_REINDEX_DETAILS = \u0ea5\u0eb2\u0e8d\u0ea5\u0eb0\u0ead\u0ebd\u0e94:
 
-FAILED_HSM = \u0ea5\u0ebb\u0ec9\u0ea1\u200b\u0ec0\u0eab\u200b\u0ea5\u0ea7 HSM \u200b\u0ec0\u0e8a\u200b\u0eaa\u200b\u0e8a\u0eb1\u0ec8\u0e99. \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0eb4\u0e94\u0e9e\u0eb2\u0e94 {0}
+FAILED_HSM = \u0ea5\u0ebb\u0ec9\u0ea1\u200b\u0ec0\u0eab\u200b\u0ea5\u0ea7 SM \u200b\u0ec0\u0e8a\u200b\u0eaa\u200b\u0e8a\u0eb1\u0ec8\u0e99. \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0eb4\u0e94\u0e9e\u0eb2\u0e94 {0}
 FAILED_HSM_DETAILS = \u0ea5\u0eb2\u0e8d\u0ea5\u0eb0\u0ead\u0ebd\u0e94:
 
 ERROR_CODE = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e82\u0ecd\u0ec9\u200b\u0e9c\u0eb4\u0e94\u0e9e\u0eb2\u0e94:
