--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = Padam Senarai Edaran
 DLTBB_Edit_tt = Edit Senarai Edaran
 DLTBB_Cancel_tt = Batalkan penciptaan Senarai Edaran
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Buka dialog HSM untuk memulakan Sesi HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Buka dialog SM untuk memulakan Sesi SM
+HSM_Title = SM
 HSM_Server_tt = \
-	Menutup dialog ini tidak akan menghenti paksa sesi HSM. \
-	Untuk menyemak status sesi HSM, kembalikan dialog ini dengan mengklik butang HSM di bar alat.
-HSM_COMPONENT_UNAVAILABLE = Komponen HSM pihak pelayan tidak dipasang.
+	Menutup dialog ini tidak akan menghenti paksa sesi SM. \
+	Untuk menyemak status sesi SM, kembalikan dialog ini dengan mengklik butang SM di bar alat.
+HSM_COMPONENT_UNAVAILABLE = Komponen SM pihak pelayan tidak dipasang.
 
 STATUSTBB_Failover = Gagal Seluruh
 STATUSTBB_Failover_tt = Pelayan gagal seluruh
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	Perubahan kepada tetapan memerlukan pemulaan semula amavisd untuk terlaksana.
 Alert_HSM = \
 	<b>Nota:</b> \
-	Anda boleh memulakan sesi HSM secara manual dengan menekan butang "Mulakan Sesi HSM". \
-	Sesi HSM juga boleh dijadualkan pada pelayan melalui kerja cron. <br> \
+	Anda boleh memulakan sesi SM secara manual dengan menekan butang "Mulakan Sesi SM". \
+	Sesi SM juga boleh dijadualkan pada pelayan melalui kerja cron. <br> \
 
 Alert_InternalPassword = <b>Nota:</b> Tetapan ini tidak mempengaruhi kata laluan yang ditetapkan oleh pengguna dalam domain yang \
 		dikonfigurasikan untuk menggunakan pengesahan luaran.
@@ -731,8 +731,8 @@ Alert_Flush_Theme_Cache = <b>Nota:</b> \
 Alert_Ngnix = <b>Nota:</b> Perubahan pada tetapan memerlukan pemulaan semula Ngnix untuk terlaksana.
 
 HSM_ProcessStatus = Sesi SM sedang berjalan.<br>{0} blob dialihkan. {1} peti mel diproses. Tinggal {2} peti mel.
-HSM_StatusReport = Sesi HSM terakhir telah dimulakan pada {0} dan tamat pada {1}
-HSM_InfoUnavailable = Maklumat tentang sesi HSM terakhir tidak tersedia
+HSM_StatusReport = Sesi SM terakhir telah dimulakan pada {0} dan tamat pada {1}
+HSM_InfoUnavailable = Maklumat tentang sesi SM terakhir tidak tersedia
 
 SERTBB_New_tt = Pelayan baharu
 SERTBB_Edit_tt = Edit pelayan
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = Pengesahan
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Perkhidmatan
-NAD_Tab_VolumeMgt = Volum
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Pengurusan storan
+NAD_Tab_HSM = Pengurusan storan
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proksi
 NAD_Tab_Bind_IP = Pengikatan Alamat IP
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = Gagal mengalihkan alias
 FAILED_REINDEX = Pengindeksan semula gagal. Kod ralat {0}
 FAILED_REINDEX_DETAILS = Butiran:
 
-FAILED_HSM = Sesi HSM gagal. Kod ralat {0}
+FAILED_HSM = Sesi SM gagal. Kod ralat {0}
 FAILED_HSM_DETAILS = Butiran:
 
 ERROR_CODE = Kod ralat:
