--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -630,11 +630,11 @@ DLTBB_Delete_tt = Distributielijst verwijderen
 DLTBB_Edit_tt = Distributielijst bewerken
 DLTBB_Cancel_tt = Distributielijst maken annuleren
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM-dialoogvenster openen om een HSM-sessie te starten
-HSM_Title = HSM
-HSM_Server_tt = Als je dit dialoogvenster sluit, wordt de HSM-sessie niet afgebroken. Als je de status van de HSM-sessie wilt controleren, brengt je dit dialoogvenster weer tevoorschijn door op de werkbalk op de knop HSM te klikken.
-HSM_COMPONENT_UNAVAILABLE = De HSM-component op de server is niet ge\u00efnstalleerd.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM-dialoogvenster openen om een SM-sessie te starten
+HSM_Title = SM
+HSM_Server_tt = Als je dit dialoogvenster sluit, wordt de SM-sessie niet afgebroken. Als je de status van de SM-sessie wilt controleren, brengt je dit dialoogvenster weer tevoorschijn door op de werkbalk op de knop SM te klikken.
+HSM_COMPONENT_UNAVAILABLE = De SM-component op de server is niet ge\u00efnstalleerd.
 
 STATUSTBB_Failover = Overschakelen bij mislukking
 STATUSTBB_Failover_tt = Overschakelingsserver bij mislukking
@@ -689,7 +689,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>Waarschuwing:</b> Om wijzigingen die aan deze instellingen zijn aangebracht van kracht laten worden, moet de proxy opnieuw worden opgestart.
 Alert_AmavisdRestart = <b>Opmerking:</b> Wijzigingen in instellingen worden pas van kracht nadat amavisd opnieuw is gestart.
-Alert_HSM = <b>N.B.: </b> Je kunt een HSM-sessie handmatig starten door te drukken op de knop \u201eHSM-sessie starten\u201d. Tevens kunnen HSM-sessies voor servers worden gepland met behulp van cron-taken. <br>
+Alert_HSM = <b>N.B.: </b> Je kunt een SM-sessie handmatig starten door te drukken op de knop \u201eSM-sessie starten\u201d. Tevens kunnen SM-sessies voor servers worden gepland met behulp van cron-taken. <br>
 Alert_InternalPassword = <b>N.B.:</b> Deze instellingen hebben geen invloed op wachtwoorden die zijn ingesteld door gebruikers die zijn geconfigureerd voor gebruik van externe verificatie.
 Alert_ExternalPassword = Alle wachtwoordinstellingen worden uitgeschakeld omdat het systeem is geconfigureerd voor het gebruik van externe verificatie.
 Alert_MailRetention = <b>Opmerking:</b> Deze instellingen hebben geen invloed als zimbraMailPurgeSleepInterval is uitgeschakeld in de serverconfiguratie of de algemene configuratie.
@@ -705,9 +705,9 @@ Voor wijzigingen van de thema-instellingen is leegmaken van de themacache van de
 
 Alert_Ngnix = <b>Opmerking:</b> Wijzigingen in instellingen worden pas van kracht nadat Ngnix opnieuw is gestart.
 
-HSM_ProcessStatus = HSM-sessie wordt uitgevoerd.<br>{0} blobs verplaatst. {1} mailboxes verwerkt. {2} resterende mailboxes.
-HSM_StatusReport = Laatste HSM-sessie werd gestart op {0} en be\u00ebindigd op {1}
-HSM_InfoUnavailable = Informatie over laatste HSM-sessie is niet beschikbaar
+HSM_ProcessStatus = SM-sessie wordt uitgevoerd.<br>{0} blobs verplaatst. {1} mailboxes verwerkt. {2} resterende mailboxes.
+HSM_StatusReport = Laatste SM-sessie werd gestart op {0} en be\u00ebindigd op {1}
+HSM_InfoUnavailable = Informatie over laatste SM-sessie is niet beschikbaar
 
 SERTBB_New_tt = Nieuwe server
 SERTBB_Edit_tt = Server bewerken
@@ -821,8 +821,8 @@ NAD_Tab_AUTH = Verificatie
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Services
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Opslagbeheer
+NAD_Tab_HSM = Opslagbeheer
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-adresbindingen
@@ -1833,7 +1833,7 @@ FAILED_MOVE_ALIAS = Alias verplaatsen mislukt
 FAILED_REINDEX = Herindexatie mislukt. Foutcode {0}
 FAILED_REINDEX_DETAILS = Details:
 
-FAILED_HSM = HSM-sessie mislukt. Foutcode {0}
+FAILED_HSM = SM-sessie mislukt. Foutcode {0}
 FAILED_HSM_DETAILS = Details:
 
 ERROR_CODE = Foutcode:
