--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -639,13 +639,13 @@ DLTBB_Delete_tt = Slett distribusjonsliste
 DLTBB_Edit_tt = Rediger distribusjonsliste
 DLTBB_Cancel_tt = Avbryt opprettingen av distribusjonsliste
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u00c5pne HSM-dialogboksen for \u00e5 starte en HSM-\u00f8kt
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u00c5pne SM-dialogboksen for \u00e5 starte en SM-\u00f8kt
+HSM_Title = SM
 HSM_Server_tt = \
-	HSM-\u00f8kten blir ikke avbrutt selv om du lukker denne dialogboksen. \
-	Hvis du vil kontrollere statusen til HSM-\u00f8kten, \u00e5pner du dialogboksen igjen ved \u00e5 klikke p\u00e5 HSM-knappen p\u00e5 verkt\u00f8ylinjen.
-HSM_COMPONENT_UNAVAILABLE = HSM-komponenten p\u00e5 serversiden er ikke installert.
+	SM-\u00f8kten blir ikke avbrutt selv om du lukker denne dialogboksen. \
+	Hvis du vil kontrollere statusen til SM-\u00f8kten, \u00e5pner du dialogboksen igjen ved \u00e5 klikke p\u00e5 SM-knappen p\u00e5 verkt\u00f8ylinjen.
+HSM_COMPONENT_UNAVAILABLE = SM-komponenten p\u00e5 serversiden er ikke installert.
 
 STATUSTBB_Failover = Failover
 STATUSTBB_Failover_tt = Failover-server
@@ -707,8 +707,8 @@ Alert_AmavisdRestart = \
 	Endringer i innstillingene krever omstart av amavisd for \u00e5 aktiveres.
 Alert_HSM = \
 	<b>Merk:</b> \
-	Du kan starte en HSM-\u00f8kt manuelt ved \u00e5 trykke p\u00e5 knappen Start HSM-\u00f8kt. \
-	HSM-\u00f8kter kan ogs\u00e5 planlegges p\u00e5 servere ved hjelp av cron-jobber. <br> \
+	Du kan starte en SM-\u00f8kt manuelt ved \u00e5 trykke p\u00e5 knappen Start SM-\u00f8kt. \
+	SM-\u00f8kter kan ogs\u00e5 planlegges p\u00e5 servere ved hjelp av cron-jobber. <br> \
 
 Alert_InternalPassword = <b>Merk:</b> Disse innstillingene p\u00e5virker ikke brukerangitte passord i domener som \
 		er konfigurert til \u00e5 bruke ekstern autentisering.
@@ -732,9 +732,9 @@ Alert_Flush_Theme_Cache =  <b>Merk:</b> \
 
 Alert_Ngnix = <b>Merk:</b> Endringer i innstillingene krever omstart av Ngnix for \u00e5 aktiveres.
 
-HSM_ProcessStatus = HSM-\u00f8kt kj\u00f8rer.<br>{0} BLOB-er er flyttet. {1} postbokser er behandlet. {2} postbokser gjenst\u00e5r.
-HSM_StatusReport = Den siste HSM-\u00f8kten ble startet {0} og avsluttet {1}
-HSM_InfoUnavailable = Informasjon om den siste HSM-\u00f8kten er ikke tilgjengelig
+HSM_ProcessStatus = SM-\u00f8kt kj\u00f8rer.<br>{0} BLOB-er er flyttet. {1} postbokser er behandlet. {2} postbokser gjenst\u00e5r.
+HSM_StatusReport = Den siste SM-\u00f8kten ble startet {0} og avsluttet {1}
+HSM_InfoUnavailable = Informasjon om den siste SM-\u00f8kten er ikke tilgjengelig
 
 SERTBB_New_tt = Ny server
 SERTBB_Edit_tt = Rediger server
@@ -850,8 +850,8 @@ NAD_Tab_AUTH = Autentisering
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Tjenester
-NAD_Tab_VolumeMgt = Volumer
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Lagringsh\u00e5ndtering
+NAD_Tab_HSM = Lagringsh\u00e5ndtering
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-adressebindinger
@@ -1882,7 +1882,7 @@ FAILED_MOVE_ALIAS = Kan ikke flytte aliaset
 FAILED_REINDEX = Omindekseringen mislyktes. Feilkode {0}
 FAILED_REINDEX_DETAILS = Detaljer:
 
-FAILED_HSM = HSM-\u00f8kten mislyktes. Feilkode {0}
+FAILED_HSM = SM-\u00f8kten mislyktes. Feilkode {0}
 FAILED_HSM_DETAILS = Detaljer:
 
 ERROR_CODE = Feilmeldingskode:
