--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -636,13 +636,13 @@ DLTBB_Delete_tt = Usu\u0144 list\u0119 dystrybucyjn\u0105
 DLTBB_Edit_tt = Edytuj list\u0119 dystrybucyjn\u0105
 DLTBB_Cancel_tt = Anuluj tworzenie listy dystrybucyjnej
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Otw\u00f3rz okno HSM, aby rozpocz\u0105\u0107 sesj\u0119 HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Otw\u00f3rz okno SM, aby rozpocz\u0105\u0107 sesj\u0119 SM
+HSM_Title = SM
 HSM_Server_tt = \
- Zamkni\u0119cie tego okno, nie anuluje sesji HSM. \
- Aby sprawdzi\u0107 stan sesji HSM, przywo\u0142aj to okno, klikaj\u0105c przycisk HSM na pasku zada\u0144.
-HSM_COMPONENT_UNAVAILABLE = Komponent HSM po stronie serwera nie jest zainstalowany.
+ Zamkni\u0119cie tego okno, nie anuluje sesji SM. \
+ Aby sprawdzi\u0107 stan sesji SM, przywo\u0142aj to okno, klikaj\u0105c przycisk SM na pasku zada\u0144.
+HSM_COMPONENT_UNAVAILABLE = Komponent SM po stronie serwera nie jest zainstalowany.
 
 STATUSTBB_Failover = Zapasowy
 STATUSTBB_Failover_tt = Serwer zapasowy
@@ -702,7 +702,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>Uwaga:</b> \
 	Zmiany ustawie\u0144 zaczynaj\u0105 dzia\u0142a\u0107 po ponownym uruchomieniu amavisd.
-Alert_HSM = <b>Uwaga:</b> Mo\u017cesz zainicjowa\u0107 sesj\u0119 HSM r\u0119cznie, naciskaj\u0105c przycisk \u201eRozpocznij Sesj\u0119 HSM\u201d. Sesje HSM mo\u017cna tak\u017ce zaplanowa\u0107 na serwerach za po\u015brednictwem polece\u0144 cron. <br>
+Alert_HSM = <b>Uwaga:</b> Mo\u017cesz zainicjowa\u0107 sesj\u0119 SM r\u0119cznie, naciskaj\u0105c przycisk \u201eRozpocznij Sesj\u0119 SM\u201d. Sesje SM mo\u017cna tak\u017ce zaplanowa\u0107 na serwerach za po\u015brednictwem polece\u0144 cron. <br>
 Alert_InternalPassword = <b>Uwaga:</b> Te ustawienia nie maj\u0105 wp\u0142ywu na has\u0142a ustalone przez u\u017cytkownik\u00f3w w domenach, kt\u00f3re \
   s\u0105 skonfigurowane do korzystania z zewn\u0119trznego uwierzytelnienia.
 Alert_ExternalPassword = Wszystkie ustawienia has\u0142a s\u0105 wy\u0142\u0105czone, poniewa\u017c system jest skonfigurowany tak, \
@@ -723,9 +723,9 @@ Alert_Flush_Theme_Cache = <b>Uwaga:</b> \
 
 Alert_Ngnix = <b>Uwaga:</b> Zmiany ustawie\u0144 zaczynaj\u0105 dzia\u0142a\u0107 po ponownym uruchomieniu Ngnix.
 
-HSM_ProcessStatus = Sesja HSM jest w toku.<br>Przeniesiono {0} obiekt\u00f3w BLOB. Przetworzono {1} skrzynek. Pozosta\u0142o {2} skrzynek.
-HSM_StatusReport = Ostatnia sesja HSM zosta\u0142a rozpocz\u0119ta {0} i zako\u0144czona {1}
-HSM_InfoUnavailable = Informacje na temat ostatniej sesji HSM s\u0105 niedost\u0119pne
+HSM_ProcessStatus = Sesja SM jest w toku.<br>Przeniesiono {0} obiekt\u00f3w BLOB. Przetworzono {1} skrzynek. Pozosta\u0142o {2} skrzynek.
+HSM_StatusReport = Ostatnia sesja SM zosta\u0142a rozpocz\u0119ta {0} i zako\u0144czona {1}
+HSM_InfoUnavailable = Informacje na temat ostatniej sesji SM s\u0105 niedost\u0119pne
 
 SERTBB_New_tt = Nowy serwer
 SERTBB_Edit_tt = Edytuj serwer
@@ -841,8 +841,8 @@ NAD_Tab_AUTH = Uwierzytelnianie
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Us\u0142ugi
-NAD_Tab_VolumeMgt = Woluminy
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Zarz\u0105dzanie magazynem
+NAD_Tab_HSM = Zarz\u0105dzanie magazynem
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = Powi\u0105zania adresu IP
@@ -1871,7 +1871,7 @@ FAILED_MOVE_ALIAS = Nie uda\u0142o si\u0119 przenie\u015b\u0107 aliasu
 FAILED_REINDEX = Ponowna indeksacja nie powiod\u0142a si\u0119. Kod b\u0142\u0119du {0}
 FAILED_REINDEX_DETAILS = Szczeg\u00f3\u0142y:
 
-FAILED_HSM = Sesja HSM nie powiod\u0142a si\u0119. Kod b\u0142\u0119du {0}
+FAILED_HSM = Sesja SM nie powiod\u0142a si\u0119. Kod b\u0142\u0119du {0}
 FAILED_HSM_DETAILS = Szczeg\u00f3\u0142y:
 
 ERROR_CODE = Kod b\u0142\u0119du:
