--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -639,13 +639,13 @@ DLTBB_Delete_tt = Eliminar lista de distribui\u00e7\u00e3o
 DLTBB_Edit_tt = Editar lista de distribui\u00e7\u00e3o
 DLTBB_Cancel_tt = Cancelar cria\u00e7\u00e3o da lista de distribui\u00e7\u00e3o
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Abra a caixa de di\u00e1logo de HSM para iniciar uma sess\u00e3o de HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Abra a caixa de di\u00e1logo de SM para iniciar uma sess\u00e3o de SM
+HSM_Title = SM
 HSM_Server_tt = \
-	O encerramento desta caixa de di\u00e1logo n\u00e3o ir\u00e1 abortar a sess\u00e3o de HSM. \
-	Para verificar o estado da sess\u00e3o de HSM, abra esta caixa de di\u00e1logo novamente ao clicar no bot\u00e3o de HSM na barra de ferramentas.
-HSM_COMPONENT_UNAVAILABLE = O componente de HSM do lado do servidor n\u00e3o est\u00e1 instalado.
+	O encerramento desta caixa de di\u00e1logo n\u00e3o ir\u00e1 abortar a sess\u00e3o de SM. \
+	Para verificar o estado da sess\u00e3o de SM, abra esta caixa de di\u00e1logo novamente ao clicar no bot\u00e3o de SM na barra de ferramentas.
+HSM_COMPONENT_UNAVAILABLE = O componente de SM do lado do servidor n\u00e3o est\u00e1 instalado.
 
 STATUSTBB_Failover = Recupera\u00e7\u00e3o autom\u00e1tica
 STATUSTBB_Failover_tt = Servidor de recupera\u00e7\u00e3o autom\u00e1tica
@@ -707,8 +707,8 @@ Alert_AmavisdRestart = \
 	As altera\u00e7\u00f5es nas defini\u00e7\u00f5es requerem o rein\u00edcio do amavisd para serem aplicadas.
 Alert_HSM = \
 	<b>Observa\u00e7\u00e3o:</b> \
-	Pode iniciar uma sess\u00e3o de HSM manualmente ao premir o bot\u00e3o "Iniciar sess\u00e3o de HSM". \
-	As sess\u00f5es de HSM podem tamb\u00e9m ser agendadas nos servidores atrav\u00e9s de tarefas agendadas. <br> \
+	Pode iniciar uma sess\u00e3o de SM manualmente ao premir o bot\u00e3o "Iniciar sess\u00e3o de SM". \
+	As sess\u00f5es de SM podem tamb\u00e9m ser agendadas nos servidores atrav\u00e9s de tarefas agendadas. <br> \
 
 Alert_InternalPassword = <b>Observa\u00e7\u00e3o:</b> Estas defini\u00e7\u00f5es n\u00e3o afetam as palavras-passe definidas pelos utilizadores em dom\u00ednios que \
  estejam configurados para utilizar uma autentica\u00e7\u00e3o externa.
@@ -732,9 +732,9 @@ Alert_Flush_Theme_Cache =  <b>Observa\u00e7\u00e3o:</b> \
 
 Alert_Ngnix = <b>Observa\u00e7\u00e3o:</b> As altera\u00e7\u00f5es nas defini\u00e7\u00f5es requerem o rein\u00edcio do Ngnix para serem aplicadas.
 
-HSM_ProcessStatus = Sess\u00e3o de HSM em execu\u00e7\u00e3o.<br>{0} Objetos grandes bin\u00e1rios movidos. {1} caixas de correio processadas. {2} caixas de correio restantes.
-HSM_StatusReport = A \u00faltima sess\u00e3o de HSM foi iniciada a {0} e terminou a {1}
-HSM_InfoUnavailable = N\u00e3o est\u00e3o dispon\u00edveis informa\u00e7\u00f5es sobre a \u00faltima sess\u00e3o de HSM
+HSM_ProcessStatus = Sess\u00e3o de SM em execu\u00e7\u00e3o.<br>{0} Objetos grandes bin\u00e1rios movidos. {1} caixas de correio processadas. {2} caixas de correio restantes.
+HSM_StatusReport = A \u00faltima sess\u00e3o de SM foi iniciada a {0} e terminou a {1}
+HSM_InfoUnavailable = N\u00e3o est\u00e3o dispon\u00edveis informa\u00e7\u00f5es sobre a \u00faltima sess\u00e3o de SM
 
 SERTBB_New_tt = Novo servidor
 SERTBB_Edit_tt = Editar servidor
@@ -850,8 +850,8 @@ NAD_Tab_AUTH = Autentica\u00e7\u00e3o
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Servi\u00e7os
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage Management
+NAD_Tab_HSM = Storage Management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = "Proxy"
 NAD_Tab_Bind_IP = Vincula\u00e7\u00f5es de endere\u00e7o de IP
@@ -1882,7 +1882,7 @@ FAILED_MOVE_ALIAS = Erro ao mover o nome alternativo
 FAILED_REINDEX = Reindexa\u00e7\u00e3o sem sucesso. C\u00f3digo de erro {0}
 FAILED_REINDEX_DETAILS = Detalhes:
 
-FAILED_HSM = Sess\u00e3o de HSM sem sucesso. C\u00f3digo de erro {0}
+FAILED_HSM = Sess\u00e3o de SM sem sucesso. C\u00f3digo de erro {0}
 FAILED_HSM_DETAILS = Detalhes:
 
 ERROR_CODE = C\u00f3digo de erro:
