--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -630,11 +630,11 @@ DLTBB_Delete_tt = Apagar a lista de distribui\u00e7\u00e3o
 DLTBB_Edit_tt = Editar lista de distribui\u00e7\u00e3o
 DLTBB_Cancel_tt = Cancelar a cria\u00e7\u00e3o da Lista de distribui\u00e7\u00e3o
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Abrir uma caixa de di\u00e1logo HSM para iniciar uma sess\u00e3o HSM
-HSM_Title = HSM
-HSM_Server_tt = Fechar esta caixa de di\u00e1logo n\u00e3o cancelar\u00e1 a se\u00e7\u00e3o HSM. Para verificar o status da se\u00e7\u00e3o HSM, abra esta caixa de di\u00e1logo novamente clicando no bot\u00e3o HSM na barra de ferramentas.
-HSM_COMPONENT_UNAVAILABLE = O componente HSM do lado do servidor n\u00e3o est\u00e1 instalado.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Abrir uma caixa de di\u00e1logo SM para iniciar uma sess\u00e3o SM
+HSM_Title = SM
+HSM_Server_tt = Fechar esta caixa de di\u00e1logo n\u00e3o cancelar\u00e1 a se\u00e7\u00e3o SM. Para verificar o status da se\u00e7\u00e3o SM, abra esta caixa de di\u00e1logo novamente clicando no bot\u00e3o SM na barra de ferramentas.
+HSM_COMPONENT_UNAVAILABLE = O componente SM do lado do servidor n\u00e3o est\u00e1 instalado.
 
 STATUSTBB_Failover = Recupera\u00e7\u00e3o autom\u00e1tica
 STATUSTBB_Failover_tt = Servidor de recupera\u00e7\u00e3o autom\u00e1tica
@@ -689,7 +689,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>Aviso:</b> \u00e9 necess\u00e1rio reiniciar o proxy para que altera\u00e7\u00f5es nessas configura\u00e7\u00f5es entrem em vigor.
 Alert_AmavisdRestart = <b>Observa\u00e7\u00e3o:</b> Para que as altera\u00e7\u00f5es de configura\u00e7\u00e3o entrem em vigor, ser\u00e1 preciso reiniciar o amavisd.
-Alert_HSM = <b>Observa\u00e7\u00e3o:</b> \u00e9 poss\u00edvel iniciar uma sess\u00e3o HSM manualmente pressionando o bot\u00e3o \u201cIniciar sess\u00e3o HSM\u201d. As sess\u00f5es HSM tamb\u00e9m podem ser programadas nos servidores atrav\u00e9s de agendadores de tarefas. <br>
+Alert_HSM = <b>Observa\u00e7\u00e3o:</b> \u00e9 poss\u00edvel iniciar uma sess\u00e3o SM manualmente pressionando o bot\u00e3o \u201cIniciar sess\u00e3o SM\u201d. As sess\u00f5es SM tamb\u00e9m podem ser programadas nos servidores atrav\u00e9s de agendadores de tarefas. <br>
 Alert_InternalPassword = <b>Observa\u00e7\u00e3o:</b> Estas configura\u00e7\u00f5es n\u00e3o afetam as senhas definidas pelos usu\u00e1rios nos dom\u00ednios que est\u00e3o configurados para usar autentica\u00e7\u00e3o externa.
 Alert_ExternalPassword = Todas as configura\u00e7\u00f5es de senha est\u00e3o desativadas porque o sistema est\u00e1 configurado para usar autentica\u00e7\u00e3o externa.
 Alert_MailRetention = <b>Observa\u00e7\u00e3o:</b> Essas configura\u00e7\u00f5es n\u00e3o entrar\u00e3o em vigor se o zimbraMailPurgeSleepInterval estiver desativado nas configura\u00e7\u00f5es globais ou do servidor.
@@ -704,9 +704,9 @@ Alert_Flush_Theme_Cache = <b>Observa\u00e7\u00e3o:</b> Alterar para a configura\
 
 Alert_Ngnix = <b>Observa\u00e7\u00e3o:</b> \u00e9 preciso reiniciar o Ngnix para que as altera\u00e7\u00f5es de configura\u00e7\u00e3o entrem em vigor.
 
-HSM_ProcessStatus = A sess\u00e3o HSM est\u00e1 em andamento.<br>{0} objetos bin\u00e1rios (blobs) movidos. {1} caixas de e-mail processadas. {2} caixas de e-mail restantes.
-HSM_StatusReport = A \u00faltima sess\u00e3o HSM iniciou em {0} e terminou em {1}
-HSM_InfoUnavailable = Informa\u00e7\u00f5es sobre a \u00faltima sess\u00e3o HSM n\u00e3o est\u00e3o dispon\u00edveis
+HSM_ProcessStatus = A sess\u00e3o SM est\u00e1 em andamento.<br>{0} objetos bin\u00e1rios (blobs) movidos. {1} caixas de e-mail processadas. {2} caixas de e-mail restantes.
+HSM_StatusReport = A \u00faltima sess\u00e3o SM iniciou em {0} e terminou em {1}
+HSM_InfoUnavailable = Informa\u00e7\u00f5es sobre a \u00faltima sess\u00e3o SM n\u00e3o est\u00e3o dispon\u00edveis
 
 SERTBB_New_tt = Novo servidor
 SERTBB_Edit_tt = Editar servidor
@@ -820,8 +820,8 @@ NAD_Tab_AUTH = Autentica\u00e7\u00e3o
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Servi\u00e7os
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage Management
+NAD_Tab_HSM = Storage Management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = V\u00ednculos de Endere\u00e7o IP
@@ -1832,7 +1832,7 @@ FAILED_MOVE_ALIAS = Erro ao mover o nome alternativo
 FAILED_REINDEX = Erro na reindexa\u00e7\u00e3o C\u00f3digo de erro {0}
 FAILED_REINDEX_DETAILS = Detalhes:
 
-FAILED_HSM = Erro na sess\u00e3o HSM. C\u00f3digo de erro {0}
+FAILED_HSM = Erro na sess\u00e3o SM. C\u00f3digo de erro {0}
 FAILED_HSM_DETAILS = Detalhes:
 
 ERROR_CODE = C\u00f3digo de erro:
