--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = Izbri\u0161i distribucijski seznam
 DLTBB_Edit_tt = Uredi distribucijski seznam
 DLTBB_Cancel_tt = Prekli\u010di ustvarjanje distribucijskega seznama
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Odpri pogovorno okno HSM za za\u010detek seje HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Odpri pogovorno okno SM za za\u010detek seje SM
+HSM_Title = SM
 HSM_Server_tt = \
-	Zaprtje tega pogovornega okna ne bo prekinilo seje HSM. \
-	Da preverite stanje seje HSM, to pogovorno okno prikli\u010dite nazaj s klikom na gumb HSM v orodni vrstici.
-HSM_COMPONENT_UNAVAILABLE = Komponenta HSM na strani stre\u017enika ni name\u0161\u010dena.
+	Zaprtje tega pogovornega okna ne bo prekinilo seje SM. \
+	Da preverite stanje seje SM, to pogovorno okno prikli\u010dite nazaj s klikom na gumb SM v orodni vrstici.
+HSM_COMPONENT_UNAVAILABLE = Komponenta SM na strani stre\u017enika ni name\u0161\u010dena.
 
 STATUSTBB_Failover = Nadomestni na\u010din
 STATUSTBB_Failover_tt = Nadomestni stre\u017enik
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 Zaradi sprememb nastavitev je treba amavisd znova zagnati, da bodo spremembe uveljavljene.
 Alert_HSM = \
 	<b>Opomba:</b> \
-	Sejo HSM lahko spro\u017eite ro\u010dno s pritiskom gumba "Za\u010dni sejo HSM". \
-	Seje HSM lahko na stre\u017enikih na\u010drtujete tudi preko poslov cron. <br> \
+	Sejo SM lahko spro\u017eite ro\u010dno s pritiskom gumba "Za\u010dni sejo SM". \
+	Seje SM lahko na stre\u017enikih na\u010drtujete tudi preko poslov cron. <br> \
 
 Alert_InternalPassword = <b>Opomba:</b> Te nastavitve ne vplivajo na gesla, ki jih dolo\u010dijo uporabniki v domenah,  \
 		ki so konfigurirane za uporabo zunanjega preverjanja pristnosti.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>Opomba:</b> \
 
 Alert_Ngnix = <b>Opomba:</b> Zaradi sprememb nastavitev je treba Ngnix znova zagnati, da bodo spremembe uveljavljene.
 
-HSM_ProcessStatus = Seja HSM v teku.<br>{0} zbirk dvoji\u0161kih podatkov premaknjenih. {1} nabiralnikov obdelanih. {2} nabiralnikov preostalih.
-HSM_StatusReport = Zadnja seja HSM se je za\u010dela ob {0} in kon\u010dala ob {1}
-HSM_InfoUnavailable = Informacije o zadnji seji HSM niso na voljo
+HSM_ProcessStatus = Seja SM v teku.<br>{0} zbirk dvoji\u0161kih podatkov premaknjenih. {1} nabiralnikov obdelanih. {2} nabiralnikov preostalih.
+HSM_StatusReport = Zadnja seja SM se je za\u010dela ob {0} in kon\u010dala ob {1}
+HSM_InfoUnavailable = Informacije o zadnji seji SM niso na voljo
 
 SERTBB_New_tt = Nov stre\u017enik
 SERTBB_Edit_tt = Uredi stre\u017enik
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = Preverjanje pristnosti
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Storitve
-NAD_Tab_VolumeMgt = Nosilci
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Upravljanje shranjevanja
+NAD_Tab_HSM = Upravljanje shranjevanja
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = Vezave naslova IP
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = Neuspeh pri premiku vzdevka
 FAILED_REINDEX = Ponovno indeksiranje ni uspelo. Koda napake {0}
 FAILED_REINDEX_DETAILS = Podrobnosti:
 
-FAILED_HSM = HSM seja ni uspela. Koda napake {0}
+FAILED_HSM = SM seja ni uspela. Koda napake {0}
 FAILED_HSM_DETAILS = Podrobnosti:
 
 ERROR_CODE = Koda napake:
