--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -630,11 +630,11 @@ DLTBB_Delete_tt = Ta bort distributionslista
 DLTBB_Edit_tt = Redigera distributionslista
 DLTBB_Cancel_tt = Avbryt skapandet av distributionslistan
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u00d6ppna HSM-dialogrutan f\u00f6r att starta en HSM-session
-HSM_Title = HSM
-HSM_Server_tt = \u00c4ven om du st\u00e4nger den h\u00e4r dialogrutan avbryts inte HSM-sessionen. Om du vill kontrollera statusen f\u00f6r HSM-sessionen \u00f6ppnar du den h\u00e4r dialogrutan igen genom att klicka p\u00e5 knappen HSM i verktygsf\u00e4ltet.
-HSM_COMPONENT_UNAVAILABLE = HSM-komponenten p\u00e5 servern \u00e4r inte installerad.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u00d6ppna SM-dialogrutan f\u00f6r att starta en SM-session
+HSM_Title = SM
+HSM_Server_tt = \u00c4ven om du st\u00e4nger den h\u00e4r dialogrutan avbryts inte SM-sessionen. Om du vill kontrollera statusen f\u00f6r SM-sessionen \u00f6ppnar du den h\u00e4r dialogrutan igen genom att klicka p\u00e5 knappen SM i verktygsf\u00e4ltet.
+HSM_COMPONENT_UNAVAILABLE = SM-komponenten p\u00e5 servern \u00e4r inte installerad.
 
 STATUSTBB_Failover = Fel (failover)
 STATUSTBB_Failover_tt = Reservserver
@@ -689,7 +689,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>Varning!</b> \u00c4ndringar av dessa inst\u00e4llningar kr\u00e4ver att proxyservern startas om innan de aktiveras.
 Alert_AmavisdRestart = <b>Obs!</b> F\u00f6r att \u00e4ndringar av inst\u00e4llningarna ska tr\u00e4da i kraft m\u00e5ste amavisd startas om.
-Alert_HSM = <b>Obs!</b> Du kan initiera en HSM-session manuellt genom att klicka p\u00e5 knappen \u201dStarta HSM-session\u201d. Du kan ocks\u00e5 schemal\u00e4gga HSM-sessioner p\u00e5 servrar via cron-jobb. <br>
+Alert_HSM = <b>Obs!</b> Du kan initiera en SM-session manuellt genom att klicka p\u00e5 knappen \u201dStarta SM-session\u201d. Du kan ocks\u00e5 schemal\u00e4gga SM-sessioner p\u00e5 servrar via cron-jobb. <br>
 Alert_InternalPassword = <b>Obs!</b> De h\u00e4r inst\u00e4llningarna p\u00e5verkar inte de l\u00f6senord som angetts av anv\u00e4ndare i dom\u00e4ner som \u00e4r konfigurerade f\u00f6r extern autentisering.
 Alert_ExternalPassword = Alla l\u00f6senordsinst\u00e4llningar har inaktiverats eftersom systemet har konfigurerats att anv\u00e4nda extern autentisering.
 Alert_MailRetention = <b>Obs!</b> De h\u00e4r inst\u00e4llningarna har ingen effekt om zimbraMailPurgeSleepInterval har inaktiverats i serverkonfigurationen eller den globala konfigurationen.
@@ -705,9 +705,9 @@ Alert_Flush_Theme_Cache = <b>Obs!</b> \
 
 Alert_Ngnix = <b>Obs!</b> F\u00f6r att \u00e4ndringar av inst\u00e4llningarna ska tr\u00e4da i kraft m\u00e5ste Ngnix startas om.
 
-HSM_ProcessStatus = HSM-session \u00e4r ig\u00e5ng.<br>{0} BLOB:ar har flyttats. {1} e-postl\u00e5dor har bearbetats. {2} e-postl\u00e5dor \u00e5terst\u00e5r.
-HSM_StatusReport = Den senaste HSM-sessionen startades {0} och avslutades {1}
-HSM_InfoUnavailable = Information om den senaste HSM-sessionen \u00e4r inte tillg\u00e4nglig
+HSM_ProcessStatus = SM-session \u00e4r ig\u00e5ng.<br>{0} BLOB:ar har flyttats. {1} e-postl\u00e5dor har bearbetats. {2} e-postl\u00e5dor \u00e5terst\u00e5r.
+HSM_StatusReport = Den senaste SM-sessionen startades {0} och avslutades {1}
+HSM_InfoUnavailable = Information om den senaste SM-sessionen \u00e4r inte tillg\u00e4nglig
 
 SERTBB_New_tt = Ny server
 SERTBB_Edit_tt = Redigera server
@@ -821,8 +821,8 @@ NAD_Tab_AUTH = Autentisering
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Tj\u00e4nster
-NAD_Tab_VolumeMgt = Volymer
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = F\u00f6rvaringshantering
+NAD_Tab_HSM = F\u00f6rvaringshantering
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP-adressbindningar
@@ -1833,7 +1833,7 @@ FAILED_MOVE_ALIAS = Det gick inte att flytta aliaset
 FAILED_REINDEX = Omindexeringen misslyckades. Felkod {0}
 FAILED_REINDEX_DETAILS = Information:
 
-FAILED_HSM = HSM-sessionen misslyckades. Felkod {0}
+FAILED_HSM = SM-sessionen misslyckades. Felkod {0}
 FAILED_HSM_DETAILS = Information:
 
 ERROR_CODE = Felkod:
