--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -635,13 +635,13 @@ DLTBB_Delete_tt = \u0e25\u0e1a\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e01\u
 DLTBB_Edit_tt = \u0e41\u0e01\u0e49\u0e44\u0e02\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e01\u0e32\u0e23\u0e41\u0e08\u0e01\u0e08\u0e48\u0e32\u0e22
 DLTBB_Cancel_tt = \u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e01\u0e32\u0e23\u0e2a\u0e23\u0e49\u0e32\u0e07\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e01\u0e32\u0e23\u0e41\u0e08\u0e01\u0e08\u0e48\u0e32\u0e22
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u0e40\u0e1b\u0e34\u0e14\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a HSM \u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u0e40\u0e1b\u0e34\u0e14\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a SM \u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM
+HSM_Title = SM
 HSM_Server_tt = \
-	\u0e01\u0e32\u0e23\u0e1b\u0e34\u0e14\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e19\u0e35\u0e49\u0e08\u0e30\u0e44\u0e21\u0e48\u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \
-	\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e15\u0e49\u0e2d\u0e07\u0e01\u0e32\u0e23\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e2a\u0e16\u0e32\u0e19\u0e30\u0e02\u0e2d\u0e07\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 \u0e43\u0e2b\u0e49\u0e19\u0e33\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e19\u0e35\u0e49\u0e01\u0e25\u0e31\u0e1a\u0e21\u0e32\u0e42\u0e14\u0e22\u0e04\u0e25\u0e34\u0e01\u0e1b\u0e38\u0e48\u0e21 HSM \u0e43\u0e19\u0e41\u0e16\u0e1a\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e21\u0e37\u0e2d
-HSM_COMPONENT_UNAVAILABLE = \u0e44\u0e21\u0e48\u0e44\u0e14\u0e49\u0e15\u0e34\u0e14\u0e15\u0e31\u0e49\u0e07\u0e04\u0e2d\u0e21\u0e42\u0e1e\u0e40\u0e19\u0e19\u0e15\u0e4c HSM \u0e14\u0e49\u0e32\u0e19\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
+	\u0e01\u0e32\u0e23\u0e1b\u0e34\u0e14\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e19\u0e35\u0e49\u0e08\u0e30\u0e44\u0e21\u0e48\u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \
+	\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e15\u0e49\u0e2d\u0e07\u0e01\u0e32\u0e23\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e2a\u0e16\u0e32\u0e19\u0e30\u0e02\u0e2d\u0e07\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 \u0e43\u0e2b\u0e49\u0e19\u0e33\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e19\u0e35\u0e49\u0e01\u0e25\u0e31\u0e1a\u0e21\u0e32\u0e42\u0e14\u0e22\u0e04\u0e25\u0e34\u0e01\u0e1b\u0e38\u0e48\u0e21 SM \u0e43\u0e19\u0e41\u0e16\u0e1a\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e21\u0e37\u0e2d
+HSM_COMPONENT_UNAVAILABLE = \u0e44\u0e21\u0e48\u0e44\u0e14\u0e49\u0e15\u0e34\u0e14\u0e15\u0e31\u0e49\u0e07\u0e04\u0e2d\u0e21\u0e42\u0e1e\u0e40\u0e19\u0e19\u0e15\u0e4c SM \u0e14\u0e49\u0e32\u0e19\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
 
 STATUSTBB_Failover = \u0e01\u0e32\u0e23\u0e22\u0e49\u0e32\u0e22\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e40\u0e01\u0e34\u0e14\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14
 STATUSTBB_Failover_tt = \u0e01\u0e32\u0e23\u0e22\u0e49\u0e32\u0e22\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e40\u0e01\u0e34\u0e14\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14
@@ -703,8 +703,8 @@ Alert_AmavisdRestart = \
 	\u0e08\u0e33\u0e40\u0e1b\u0e47\u0e19\u0e15\u0e49\u0e2d\u0e07\u0e40\u0e23\u0e34\u0e48\u0e21 amavisd \u0e43\u0e2b\u0e21\u0e48\u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e43\u0e2b\u0e49\u0e01\u0e32\u0e23\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19\u0e41\u0e1b\u0e25\u0e07\u0e01\u0e32\u0e23\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e21\u0e35\u0e1c\u0e25
 Alert_HSM = \
 	<b>\u0e2b\u0e21\u0e32\u0e22\u0e40\u0e2b\u0e15\u0e38:</b> \
-	\u0e04\u0e38\u0e13\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e44\u0e14\u0e49\u0e14\u0e49\u0e27\u0e22\u0e15\u0e19\u0e40\u0e2d\u0e07\u0e42\u0e14\u0e22\u0e01\u0e32\u0e23\u0e01\u0e14\u0e1b\u0e38\u0e48\u0e21 "\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM" \
-	\u0e41\u0e25\u0e30\u0e22\u0e31\u0e07\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e08\u0e31\u0e14\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e01\u0e32\u0e23\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e44\u0e14\u0e49\u0e1a\u0e19\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e1c\u0e48\u0e32\u0e19\u0e07\u0e32\u0e19 cron <br> \
+	\u0e04\u0e38\u0e13\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e44\u0e14\u0e49\u0e14\u0e49\u0e27\u0e22\u0e15\u0e19\u0e40\u0e2d\u0e07\u0e42\u0e14\u0e22\u0e01\u0e32\u0e23\u0e01\u0e14\u0e1b\u0e38\u0e48\u0e21 "\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM" \
+	\u0e41\u0e25\u0e30\u0e22\u0e31\u0e07\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e08\u0e31\u0e14\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e01\u0e32\u0e23\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e44\u0e14\u0e49\u0e1a\u0e19\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e1c\u0e48\u0e32\u0e19\u0e07\u0e32\u0e19 cron <br> \
 
 Alert_InternalPassword = <b>\u0e2b\u0e21\u0e32\u0e22\u0e40\u0e2b\u0e15\u0e38:</b> \u0e01\u0e32\u0e23\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e40\u0e2b\u0e25\u0e48\u0e32\u0e19\u0e35\u0e49\u0e44\u0e21\u0e48\u0e21\u0e35\u0e1c\u0e25\u0e01\u0e31\u0e1a\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e17\u0e35\u0e48\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e02\u0e36\u0e49\u0e19\u0e43\u0e19\u0e42\u0e14\u0e40\u0e21\u0e19\u0e17\u0e35\u0e48\
 		\u0e21\u0e35\u0e01\u0e32\u0e23\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e04\u0e48\u0e32\u0e43\u0e2b\u0e49\u0e43\u0e0a\u0e49\u0e01\u0e32\u0e23\u0e23\u0e31\u0e1a\u0e23\u0e2d\u0e07\u0e04\u0e27\u0e32\u0e21\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07\u0e08\u0e32\u0e01\u0e20\u0e32\u0e22\u0e19\u0e2d\u0e01
@@ -728,9 +728,9 @@ Alert_Flush_Theme_Cache = <b>\u0e2b\u0e21\u0e32\u0e22\u0e40\u0e2b\u0e15\u0e38:</
 
 Alert_Ngnix = <b>\u0e2b\u0e21\u0e32\u0e22\u0e40\u0e2b\u0e15\u0e38:</b> \u0e08\u0e33\u0e40\u0e1b\u0e47\u0e19\u0e15\u0e49\u0e2d\u0e07\u0e40\u0e23\u0e34\u0e48\u0e21 Ngnix \u0e43\u0e2b\u0e21\u0e48\u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e43\u0e2b\u0e49\u0e01\u0e32\u0e23\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19\u0e41\u0e1b\u0e25\u0e07\u0e01\u0e32\u0e23\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e21\u0e35\u0e1c\u0e25
 
-HSM_ProcessStatus = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e01\u0e33\u0e25\u0e31\u0e07\u0e17\u0e33\u0e07\u0e32\u0e19\u0e2d\u0e22\u0e39\u0e48<br>{0} \u0e22\u0e49\u0e32\u0e22 blob \u0e41\u0e25\u0e49\u0e27 {1} \u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e41\u0e25\u0e49\u0e27 {2} \u0e01\u0e25\u0e48\u0e2d\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e17\u0e35\u0e48\u0e40\u0e2b\u0e25\u0e37\u0e2d
-HSM_StatusReport = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e25\u0e48\u0e32\u0e2a\u0e38\u0e14\u0e44\u0e14\u0e49\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e21\u0e37\u0e48\u0e2d {0} \u0e41\u0e25\u0e30\u0e2a\u0e34\u0e49\u0e19\u0e2a\u0e38\u0e14\u0e40\u0e21\u0e37\u0e48\u0e2d {1}
-HSM_InfoUnavailable = \u0e44\u0e21\u0e48\u0e21\u0e35\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e40\u0e01\u0e35\u0e48\u0e22\u0e27\u0e01\u0e31\u0e1a\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e25\u0e48\u0e32\u0e2a\u0e38\u0e14
+HSM_ProcessStatus = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e01\u0e33\u0e25\u0e31\u0e07\u0e17\u0e33\u0e07\u0e32\u0e19\u0e2d\u0e22\u0e39\u0e48<br>{0} \u0e22\u0e49\u0e32\u0e22 blob \u0e41\u0e25\u0e49\u0e27 {1} \u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e41\u0e25\u0e49\u0e27 {2} \u0e01\u0e25\u0e48\u0e2d\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e17\u0e35\u0e48\u0e40\u0e2b\u0e25\u0e37\u0e2d
+HSM_StatusReport = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e25\u0e48\u0e32\u0e2a\u0e38\u0e14\u0e44\u0e14\u0e49\u0e40\u0e23\u0e34\u0e48\u0e21\u0e15\u0e49\u0e19\u0e40\u0e21\u0e37\u0e48\u0e2d {0} \u0e41\u0e25\u0e30\u0e2a\u0e34\u0e49\u0e19\u0e2a\u0e38\u0e14\u0e40\u0e21\u0e37\u0e48\u0e2d {1}
+HSM_InfoUnavailable = \u0e44\u0e21\u0e48\u0e21\u0e35\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e40\u0e01\u0e35\u0e48\u0e22\u0e27\u0e01\u0e31\u0e1a\u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e25\u0e48\u0e32\u0e2a\u0e38\u0e14
 
 SERTBB_New_tt = \u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e43\u0e2b\u0e21\u0e48
 SERTBB_Edit_tt = \u0e41\u0e01\u0e49\u0e44\u0e02\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
@@ -846,8 +846,8 @@ NAD_Tab_AUTH = \u0e01\u0e32\u0e23\u0e23\u0e31\u0e1a\u0e23\u0e2d\u0e07\u0e04\u0e2
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u0e1a\u0e23\u0e34\u0e01\u0e32\u0e23
-NAD_Tab_VolumeMgt = \u0e44\u0e14\u0e23\u0e1f\u0e4c\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u0e01\u0e32\u0e23\u0e08\u0e31\u0e14\u0e01\u0e32\u0e23\u0e1e\u0e37\u0e49\u0e19\u0e17\u0e35\u0e48\u0e08\u0e31\u0e14\u0e40\u0e01\u0e47\u0e1a
+NAD_Tab_HSM = \u0e01\u0e32\u0e23\u0e08\u0e31\u0e14\u0e01\u0e32\u0e23\u0e1e\u0e37\u0e49\u0e19\u0e17\u0e35\u0e48\u0e08\u0e31\u0e14\u0e40\u0e01\u0e47\u0e1a
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = \u0e1e\u0e23\u0e47\u0e2d\u0e01\u0e0b\u0e35
 NAD_Tab_Bind_IP = \u0e01\u0e32\u0e23\u0e23\u0e27\u0e21\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48 IP
@@ -1876,7 +1876,7 @@ FAILED_MOVE_ALIAS = \u0e44\u0e21\u0e48\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e22
 FAILED_REINDEX = \u0e01\u0e32\u0e23\u0e17\u0e33\u0e14\u0e31\u0e0a\u0e19\u0e35\u0e43\u0e2b\u0e21\u0e48\u0e25\u0e49\u0e21\u0e40\u0e2b\u0e25\u0e27 \u0e23\u0e2b\u0e31\u0e2a\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14 {0}
 FAILED_REINDEX_DETAILS = \u0e23\u0e32\u0e22\u0e25\u0e30\u0e40\u0e2d\u0e35\u0e22\u0e14:
 
-FAILED_HSM = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 HSM \u0e25\u0e49\u0e21\u0e40\u0e2b\u0e25\u0e27 \u0e23\u0e2b\u0e31\u0e2a\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14 {0}
+FAILED_HSM = \u0e40\u0e0b\u0e2a\u0e0a\u0e31\u0e19 SM \u0e25\u0e49\u0e21\u0e40\u0e2b\u0e25\u0e27 \u0e23\u0e2b\u0e31\u0e2a\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14 {0}
 FAILED_HSM_DETAILS = \u0e23\u0e32\u0e22\u0e25\u0e30\u0e40\u0e2d\u0e35\u0e22\u0e14:
 
 ERROR_CODE = \u0e23\u0e2b\u0e31\u0e2a\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14:
