--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = Da\u011f\u0131t\u0131m Listesini Sil
 DLTBB_Edit_tt = Da\u011f\u0131t\u0131m Listesini D\u00fczenle
 DLTBB_Cancel_tt = Da\u011f\u0131t\u0131m Listesi olu\u015fturmay\u0131 iptal et
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM Oturumu ba\u015flatmak i\u00e7in HSM ileti\u015fim kutusunu a\u00e7
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM Oturumu ba\u015flatmak i\u00e7in SM ileti\u015fim kutusunu a\u00e7
+HSM_Title = SM
 HSM_Server_tt = \
-	 Bu ileti\u015fim kutusunun kapat\u0131lmas\u0131, HSM oturumunu iptal etmeyecektir. \
-	 HSM oturumunun durumunu kontrol etmek i\u00e7in, ara\u00e7 \u00e7ubu\u011fundaki HSM d\u00fc\u011fmesini t\u0131klayarak bu ileti\u015fim kutusunu geri \u00e7a\u011f\u0131r\u0131n.
-HSM_COMPONENT_UNAVAILABLE = Sunucu taraf\u0131 HSM bile\u015feni kurulmad\u0131
+	 Bu ileti\u015fim kutusunun kapat\u0131lmas\u0131, SM oturumunu iptal etmeyecektir. \
+	 SM oturumunun durumunu kontrol etmek i\u00e7in, ara\u00e7 \u00e7ubu\u011fundaki SM d\u00fc\u011fmesini t\u0131klayarak bu ileti\u015fim kutusunu geri \u00e7a\u011f\u0131r\u0131n.
+HSM_COMPONENT_UNAVAILABLE = Sunucu taraf\u0131 SM bile\u015feni kurulmad\u0131
 
 STATUSTBB_Failover = Hata Durumunda Yedek Sunucuya Ge\u00e7i\u015f
 STATUSTBB_Failover_tt = Hata durumunda ge\u00e7ilecek sunucu
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	Ayarlardaki de\u011fi\u015fikliklerin y\u00fcr\u00fcrl\u00fc\u011fe girmesi i\u00e7in amavisd\u2019in yeniden ba\u015flat\u0131lmas\u0131 gerekir.
 Alert_HSM = \
 	 <b>Not:</b> \
-	 \u201cHSM Oturumu Ba\u015flat\u201d d\u00fc\u011fmesine basarak HSM oturumunu el ile ba\u015flatabilirsiniz. \
-	 HSM oturumlar\u0131 sunucularda zamanlanm\u0131\u015f g\u00f6revler olarak da zamanlanabilir. <br> \
+	 \u201cSM Oturumu Ba\u015flat\u201d d\u00fc\u011fmesine basarak SM oturumunu el ile ba\u015flatabilirsiniz. \
+	 SM oturumlar\u0131 sunucularda zamanlanm\u0131\u015f g\u00f6revler olarak da zamanlanabilir. <br> \
 
 Alert_InternalPassword = <b>Not:</b> Bu ayarlar d\u0131\u015f kimlik do\u011frulama kullanacak \u015fekilde yap\u0131land\u0131r\u0131lm\u0131\u015f etki alanlar\u0131ndaki kullan\u0131c\u0131lar taraf\u0131ndan belirlenen parolalar\u0131 etkilemeyecektir.
 Alert_ExternalPassword = T\u00fcm parola ayarlar\u0131 devre d\u0131\u015f\u0131, \u00e7\u00fcnk\u00fc sistem \
@@ -728,9 +728,9 @@ Alert_Flush_Theme_Cache = <b>Not:</b> \
 
 Alert_Ngnix = <b>Not:</b> Ayarlardaki de\u011fi\u015fikliklerin y\u00fcr\u00fcrl\u00fc\u011fe girmesi i\u00e7in Ngnix\u2019in yeniden ba\u015flat\u0131lmas\u0131 gerekir.
 
-HSM_ProcessStatus = HSM Oturumu \u00e7al\u0131\u015f\u0131yor.<br>{0} blob ta\u015f\u0131nd\u0131. {1} posta kutusu i\u015flendi. {2} posta kutusu kald\u0131.
-HSM_StatusReport = Son HSM oturumu \u015fu saatte ba\u015flat\u0131ld\u0131: {0} ve \u015fu saatte sona erdi: {1}
-HSM_InfoUnavailable = Son HSM oturuma ili\u015fkin bilgiler yok
+HSM_ProcessStatus = SM Oturumu \u00e7al\u0131\u015f\u0131yor.<br>{0} blob ta\u015f\u0131nd\u0131. {1} posta kutusu i\u015flendi. {2} posta kutusu kald\u0131.
+HSM_StatusReport = Son SM oturumu \u015fu saatte ba\u015flat\u0131ld\u0131: {0} ve \u015fu saatte sona erdi: {1}
+HSM_InfoUnavailable = Son SM oturuma ili\u015fkin bilgiler yok
 
 SERTBB_New_tt = Yeni sunucu
 SERTBB_Edit_tt = Sunucuyu d\u00fczenle
@@ -846,8 +846,8 @@ NAD_Tab_AUTH = Kimlik Do\u011frulama
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Hizmetler
-NAD_Tab_VolumeMgt = Birimler
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Depolama Y\u00f6netimi
+NAD_Tab_HSM = Depolama Y\u00f6netimi
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Yard\u0131mc\u0131 sunucu
 NAD_Tab_Bind_IP = IP Adres Ba\u011flay\u0131c\u0131lar\u0131
@@ -1876,7 +1876,7 @@ FAILED_MOVE_ALIAS = Takma ad ta\u015f\u0131namad\u0131
 FAILED_REINDEX = Yeniden dizinleme ba\u015far\u0131s\u0131z oldu. Hata kodu {0}
 FAILED_REINDEX_DETAILS = Ayr\u0131nt\u0131lar:
 
-FAILED_HSM = HSM Oturumu ba\u015far\u0131s\u0131z oldu. Hata kodu {0}
+FAILED_HSM = SM Oturumu ba\u015far\u0131s\u0131z oldu. Hata kodu {0}
 FAILED_HSM_DETAILS = Ayr\u0131nt\u0131lar:
 
 ERROR_CODE = Hata kodu:
