--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -639,13 +639,13 @@ DLTBB_Delete_tt = X\u00f3a danh s\u00e1ch g\u1eedi th\u01b0 m\u1edbi
 DLTBB_Edit_tt = S\u1eeda danh s\u00e1ch g\u1eedi th\u01b0
 DLTBB_Cancel_tt = H\u1ee7y vi\u1ec7c t\u1ea1o danh s\u00e1ch g\u1eedi th\u01b0
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = M\u1edf h\u1ed9p tho\u1ea1i HSM \u0111\u1ec3 b\u1eaft \u0111\u1ea7u m\u1ed9t phi\u00ean HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = M\u1edf h\u1ed9p tho\u1ea1i SM \u0111\u1ec3 b\u1eaft \u0111\u1ea7u m\u1ed9t phi\u00ean SM
+HSM_Title = SM
 HSM_Server_tt = \
-	\u0110ng h\u1ed9p tho\u1ea1i n\u00e0y s\u1ebd kh\u00f4ng h\u1ee7y b\u1ecf phi\u00ean HSM. \
-	\u0110\u1ec3 ki\u1ec3m tra tr\u1ea1ng th\u00e1i c\u1ee7a phi\u00ean HSM, m\u1edf l\u1ea1i h\u1ed9p tho\u1ea1i n\u00e0y b\u1eb1ng c\u00e1ch b\u1ea5m n\u00fat HSM trong thanh c\u00f4ng c\u1ee5.
-HSM_COMPONENT_UNAVAILABLE = Th\u00e0nh ph\u1ea7n HSM ph\u00eda m\u00e1y ch\u1ee7 kh\u00f4ng \u0111\u01b0\u1ee3c c\u00e0i \u0111\u1eb7t.
+	\u0110ng h\u1ed9p tho\u1ea1i n\u00e0y s\u1ebd kh\u00f4ng h\u1ee7y b\u1ecf phi\u00ean SM. \
+	\u0110\u1ec3 ki\u1ec3m tra tr\u1ea1ng th\u00e1i c\u1ee7a phi\u00ean SM, m\u1edf l\u1ea1i h\u1ed9p tho\u1ea1i n\u00e0y b\u1eb1ng c\u00e1ch b\u1ea5m n\u00fat SM trong thanh c\u00f4ng c\u1ee5.
+HSM_COMPONENT_UNAVAILABLE = Th\u00e0nh ph\u1ea7n SM ph\u00eda m\u00e1y ch\u1ee7 kh\u00f4ng \u0111\u01b0\u1ee3c c\u00e0i \u0111\u1eb7t.
 
 STATUSTBB_Failover = Chuy\u1ec3n \u0111\u1ed5i d\u1ef1 ph\u00f2ng
 STATUSTBB_Failover_tt = Chuy\u1ec3n \u0111\u1ed5i d\u1ef1 ph\u00f2ng m\u00e1y ch\u1ee7
@@ -707,8 +707,8 @@ Alert_AmavisdRestart = \
 	Ph\u1ea3i kh\u1edfi \u0111\u1ed9ng l\u1ea1i amavisd \u0111\u1ec3 nh\u1eefng thay \u0111\u1ed5i \u0111\u1ed1i v\u1edbi c\u00e1c thi\u1ebft l\u1eadp n\u00e0y c\u00f3 hi\u1ec7u l\u1ef1c.
 Alert_HSM = \
 	<b>L\u01b0u \u00fd:</b> \
-	B\u1ea1n c\u00f3 th\u1ec3 b\u1eaft \u0111\u1ea7u m\u1ed9t phi\u00ean HSM theo c\u00e1ch th\u1ee7 c\u00f4ng b\u1eb1ng c\u00e1ch b\u1ea5m n\u00fat "B\u1eaft \u0111\u1ea7u phi\u00ean HSM". \
-	Phi\u00ean HSM c\u0169ng c\u00f3 th\u1ec3 \u0111\u01b0\u1ee3c l\u00ean l\u1ecbch tr\u00ean m\u00e1y ch\u1ee7 th\u00f4ng qua c\u00e1c l\u1ec7nh c\u00e0i s\u1eb5n. <br> \
+	B\u1ea1n c\u00f3 th\u1ec3 b\u1eaft \u0111\u1ea7u m\u1ed9t phi\u00ean SM theo c\u00e1ch th\u1ee7 c\u00f4ng b\u1eb1ng c\u00e1ch b\u1ea5m n\u00fat "B\u1eaft \u0111\u1ea7u phi\u00ean SM". \
+	Phi\u00ean SM c\u0169ng c\u00f3 th\u1ec3 \u0111\u01b0\u1ee3c l\u00ean l\u1ecbch tr\u00ean m\u00e1y ch\u1ee7 th\u00f4ng qua c\u00e1c l\u1ec7nh c\u00e0i s\u1eb5n. <br> \
 
 Alert_InternalPassword = <b>L\u01b0u \u00fd:</b> Nh\u1eefng thi\u1ebft l\u1eadp n\u00e0y kh\u00f4ng \u1ea3nh h\u01b0\u1edfng t\u1edbi c\u00e1c m\u1eadt kh\u1ea9u \u0111\u01b0\u1ee3c ng\u01b0\u1eddi d\u00f9ng \u0111\u1eb7t trong t\u00ean mi\u1ec1n \
  \u0111\u01b0\u1ee3c c\u1ea5u h\u00ecnh \u0111\u1ec3 s\u1eed d\u1ee5ng x\u00e1c th\u1ef1c b\u00ean ngo\u00e0i.
@@ -732,9 +732,9 @@ Alert_Flush_Theme_Cache =  <b>L\u01b0u \u00fd:</b> \
 
 Alert_Ngnix = <b>L\u01b0u \u00fd:</b> Ph\u1ea3i kh\u1edfi \u0111\u1ed9ng l\u1ea1i Ngnix \u0111\u1ec3 nh\u1eefng thay \u0111\u1ed5i \u0111\u1ed1i v\u1edbi c\u00e1c thi\u1ebft l\u1eadp c\u00f3 hi\u1ec7u l\u1ef1c.
 
-HSM_ProcessStatus = Phi\u00ean HSM \u0111ang ch\u1ea1y.<br>\u0110\u00e3 di chuy\u1ec3n {0} \u0111\u1ed1i t\u01b0\u1ee3ng nh\u1ecb ph\u00e2n. \u0110\u00e3 x\u1eed l\u00fd {1} h\u1ed9p th\u01b0. C\u00f2n l\u1ea1i {2} h\u1ed9p th\u01b0.
-HSM_StatusReport = Phi\u00ean HSM cu\u1ed1i c\u00f9ng \u0111\u00e3 \u0111\u01b0\u1ee3c b\u1eaft \u0111\u1ea7u v\u00e0o {0} v\u00e0 k\u1ebft th\u00fac v\u00e0o {1}
-HSM_InfoUnavailable = Th\u00f4ng tin tr\u00ean phi\u00ean HSM cu\u1ed1i c\u00f9ng kh\u00f4ng kh\u1ea3 d\u1ee5ng
+HSM_ProcessStatus = Phi\u00ean SM \u0111ang ch\u1ea1y.<br>\u0110\u00e3 di chuy\u1ec3n {0} \u0111\u1ed1i t\u01b0\u1ee3ng nh\u1ecb ph\u00e2n. \u0110\u00e3 x\u1eed l\u00fd {1} h\u1ed9p th\u01b0. C\u00f2n l\u1ea1i {2} h\u1ed9p th\u01b0.
+HSM_StatusReport = Phi\u00ean SM cu\u1ed1i c\u00f9ng \u0111\u00e3 \u0111\u01b0\u1ee3c b\u1eaft \u0111\u1ea7u v\u00e0o {0} v\u00e0 k\u1ebft th\u00fac v\u00e0o {1}
+HSM_InfoUnavailable = Th\u00f4ng tin tr\u00ean phi\u00ean SM cu\u1ed1i c\u00f9ng kh\u00f4ng kh\u1ea3 d\u1ee5ng
 
 SERTBB_New_tt = T\u1ea1o m\u00e1y ch\u1ee7 m\u1edbi
 SERTBB_Edit_tt = S\u1eeda m\u00e1y ch\u1ee7
@@ -850,8 +850,8 @@ NAD_Tab_AUTH = X\u00e1c th\u1ef1c
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = D\u1ecbch v\u1ee5
-NAD_Tab_VolumeMgt = Dung l\u01b0\u1ee3ng
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u0051\u0075\u1ea3\u006e \u006c\u00fd \u006c\u01b0\u0075 \u0074\u0072\u1eef
+NAD_Tab_HSM = \u0051\u0075\u1ea3\u006e \u006c\u00fd \u006c\u01b0\u0075 \u0074\u0072\u1eef
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = K\u1ebft n\u1ed1i \u0111\u1ecba ch\u1ec9 IP
@@ -1882,7 +1882,7 @@ FAILED_MOVE_ALIAS = Chuy\u1ec3n b\u00ed danh th\u1ea5t b\u1ea1i
 FAILED_REINDEX = \u0110\u00e1nh ch\u1ec9 m\u1ee5c l\u1ea1i th\u1ea5t b\u1ea1i. M\u00e3 l\u1ed7i {0}
 FAILED_REINDEX_DETAILS = Chi ti\u1ebft:
 
-FAILED_HSM = Phi\u00ean HSM th\u1ea5t b\u1ea1i. M\u00e3 l\u1ed7i {0}
+FAILED_HSM = Phi\u00ean SM th\u1ea5t b\u1ea1i. M\u00e3 l\u1ed7i {0}
 FAILED_HSM_DETAILS = Chi ti\u1ebft:
 
 ERROR_CODE = M\u00e3 l\u1ed7i:
