--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = Supprimer la liste de distribution
 DLTBB_Edit_tt = Modifier la liste de distribution
 DLTBB_Cancel_tt = Annuler la cr\u00e9ation de la liste de distribution
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Ouvrir une boite de dialogue HSM pour ouvrir une session HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Ouvrir une boite de dialogue HM pour ouvrir une session SM
+HSM_Title = SM
 HSM_Server_tt = \
-	Fermer cette bo\u00eete de dialogue n\u2019arr\u00eatera pas pr\u00e9matur\u00e9ment votre session HSM. \
-	Pour v\u00e9rifier le statut de votre session HSM, ouvrez \u00e0 nouveau cette bo\u00eete de dialogue en cliquant sur le bouton HSM dans la barre d\u2019outils.
-HSM_COMPONENT_UNAVAILABLE = Le composant HSM c\u00f4t\u00e9 serveur n\u2019est pas install\u00e9.
+	Fermer cette bo\u00eete de dialogue n\u2019arr\u00eatera pas pr\u00e9matur\u00e9ment votre session SM. \
+	Pour v\u00e9rifier le statut de votre session SM, ouvrez \u00e0 nouveau cette bo\u00eete de dialogue en cliquant sur le bouton SM dans la barre d\u2019outils.
+HSM_COMPONENT_UNAVAILABLE = Le composant SM c\u00f4t\u00e9 serveur n\u2019est pas install\u00e9.
 
 STATUSTBB_Failover = Secours
 STATUSTBB_Failover_tt = Serveur de secours
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	Les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage du serveur.
 Alert_HSM = \
 	<b>Remarque\u00a0:</b> \
-	Vous pouvez lancer une session HSM manuellement en cliquant sur le bouton "Lancer session HSM". \
-	Les sessions HSM peuvent aussi \u00eatre programm\u00e9es sur les serveurs au moyen de t\u00e2ches cron.  <br> \
+	Vous pouvez lancer une session SM manuellement en cliquant sur le bouton "Lancer session SM". \
+	Les sessions SM peuvent aussi \u00eatre programm\u00e9es sur les serveurs au moyen de t\u00e2ches cron.  <br> \
 
 Alert_InternalPassword = <b>Remarque\u00a0:</b> Ces param\u00e8tres n\u2019affectent pas les mots de passe d\u00e9finis par les utilisateurs dans les \
  domaines qui ex\u00e9cutent une authentification externe.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>Remarque\u00a0:</b> \
 
 Alert_Ngnix = <b>Remarque\u00a0:</b> les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage de Ngnix.
 
-HSM_ProcessStatus = Une session HSM est en cours. <br>{0} blobs d\u00e9plac\u00e9s. {1} bo\u00eetes de r\u00e9ception trait\u00e9es. {2} bo\u00eetes de r\u00e9ception \u00e0 traiter.
-HSM_StatusReport = La derni\u00e8re session HSM a d\u00e9marr\u00e9 \u00e0 {0} et s\u2019est termin\u00e9e \u00e0 {1}
-HSM_InfoUnavailable = Informations sur la derni\u00e8re session HSM non disponibles
+HSM_ProcessStatus = Une session SM est en cours. <br>{0} blobs d\u00e9plac\u00e9s. {1} bo\u00eetes de r\u00e9ception trait\u00e9es. {2} bo\u00eetes de r\u00e9ception \u00e0 traiter.
+HSM_StatusReport = La derni\u00e8re session SM a d\u00e9marr\u00e9 \u00e0 {0} et s\u2019est termin\u00e9e \u00e0 {1}
+HSM_InfoUnavailable = Informations sur la derni\u00e8re session SM non disponibles
 
 SERTBB_New_tt = Nouveau serveur
 SERTBB_Edit_tt = Modifier le serveur
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = Authentification
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Services
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage management
+NAD_Tab_HSM = Storage management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = Liaisons d\u2019adresse IP
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = Impossible de d\u00e9placer l\u2019alias
 FAILED_REINDEX = Erreur de r\u00e9indexation. Code d\u2019erreur {0}
 FAILED_REINDEX_DETAILS = D\u00e9tails\u00a0:
 
-FAILED_HSM = \u00c9chec de la session HSM. Code d\u2019erreur {0}
+FAILED_HSM = \u00c9chec de la session SM. Code d\u2019erreur {0}
 FAILED_HSM_DETAILS = D\u00e9tails\u00a0:
 
 ERROR_CODE = Code d\u2019erreur\u00a0:
