--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -639,13 +639,13 @@ DLTBB_Delete_tt = Hapus Daftar Distribusi
 DLTBB_Edit_tt = Edit Daftar Distribusi
 DLTBB_Cancel_tt = Batalkan pembuatan Daftar Distribusi
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Buka dialog HSM untuk memulai Sesi HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Buka dialog SM untuk memulai Sesi SM
+HSM_Title = SM
 HSM_Server_tt = \
-	Menutup dialog ini tidak akan menghentikan sesi HSM. \
-	Untuk memeriksa status sesi HSM, kembalikan dialog ini dengan mengeklik tombol HSM pada toolbar.
-HSM_COMPONENT_UNAVAILABLE = Komponen HSM samping server belum diinstal.
+	Menutup dialog ini tidak akan menghentikan sesi SM. \
+	Untuk memeriksa status sesi SM, kembalikan dialog ini dengan mengeklik tombol SM pada toolbar.
+HSM_COMPONENT_UNAVAILABLE = Komponen SM samping server belum diinstal.
 
 STATUSTBB_Failover = Gagal
 STATUSTBB_Failover_tt = Gagal pada server
@@ -707,8 +707,8 @@ Alert_AmavisdRestart = \
 	Perubahan terhadap pengaturan mengharuskan restart amavisd agar berlaku.
 Alert_HSM = \
 	<b>Catatan:</b> \
-	Anda dapat mengawali sesi HSM secara manual dengan menekan tombol "Mulai Sesi HSM". \
-	Sesi HSM juga dapat dijadwalkan pada server melalui tugas cron. <br> \
+	Anda dapat mengawali sesi SM secara manual dengan menekan tombol "Mulai Sesi SM". \
+	Sesi SM juga dapat dijadwalkan pada server melalui tugas cron. <br> \
 
 Alert_InternalPassword = <b>Catatan:</b> Pengaturan ini tidak mempengaruhi kata sandi yang diatur oleh pengguna pada domain yang \
 		dikonfigurasi untuk menggunakan autentikasi eksternal.
@@ -732,9 +732,9 @@ Alert_Flush_Theme_Cache = <b>Catatan:</b> \
 
 Alert_Ngnix = <b>Catatan:</b> Perubahan terhadap pengaturan mengharuskan restart Ngnix agar berlaku.
 
-HSM_ProcessStatus = Sesi HSM sedang berjalan.<br>{0} blob dipindahkan. {1} kotak email diproses. {2} kotak email tersisa.
-HSM_StatusReport = Sesi HSM terakhir dimulai saat {0} dan diakhiri saat {1}
-HSM_InfoUnavailable = Informasi tentang sesi HSM terakhir tidak tersedia
+HSM_ProcessStatus = Sesi SM sedang berjalan.<br>{0} blob dipindahkan. {1} kotak email diproses. {2} kotak email tersisa.
+HSM_StatusReport = Sesi SM terakhir dimulai saat {0} dan diakhiri saat {1}
+HSM_InfoUnavailable = Informasi tentang sesi SM terakhir tidak tersedia
 
 SERTBB_New_tt = Server baru
 SERTBB_Edit_tt = Edit server
@@ -850,8 +850,8 @@ NAD_Tab_AUTH = Autentikasi
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Layanan
-NAD_Tab_VolumeMgt = Volume
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage management
+NAD_Tab_HSM = Storage management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proksi
 NAD_Tab_Bind_IP = Pengikatan Alamat IP
@@ -1881,7 +1881,7 @@ FAILED_MOVE_ALIAS = Gagal memindahkan alias
 FAILED_REINDEX = Mengindeks ulang gagal. Kode kesalahan {0}
 FAILED_REINDEX_DETAILS = Detail:
 
-FAILED_HSM = Sesi HSM gagal. Kode kesalahan {0}
+FAILED_HSM = Sesi SM gagal. Kode kesalahan {0}
 FAILED_HSM_DETAILS = Detail:
 
 ERROR_CODE = Kode kesalahan:
