--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -635,11 +635,11 @@ DLTBB_Delete_tt = \u914d\u5e03\u30ea\u30b9\u30c8\u3092\u524a\u9664
 DLTBB_Edit_tt = \u914d\u5e03\u30ea\u30b9\u30c8\u3092\u7de8\u96c6
 DLTBB_Cancel_tt = \u914d\u5e03\u30ea\u30b9\u30c8\u306e\u4f5c\u6210\u3092\u30ad\u30e3\u30f3\u30bb\u30eb
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u958b\u3044\u3066HSM \u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb
-HSM_Title = HSM
-HSM_Server_tt = \u3053\u306e\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u9589\u3058\u3066\u3082\u3001HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306f\u4e2d\u6b62\u3055\u308c\u307e\u305b\u3093\u3002 HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u30b9\u30c6\u30fc\u30bf\u30b9\u3092\u8abf\u3079\u308b\u306b\u306f\u3001\u30c4\u30fc\u30eb\u30d0\u30fc\u306e[HSM]\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3053\u306e\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u958b\u304d\u307e\u3059\u3002
-HSM_COMPONENT_UNAVAILABLE = \u30b5\u30fc\u30d0\u30fc\u5074\u306eHSM\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u304c\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u958b\u3044\u3066SM \u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb
+HSM_Title = SM
+HSM_Server_tt = \u3053\u306e\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u9589\u3058\u3066\u3082\u3001SM\u30bb\u30c3\u30b7\u30e7\u30f3\u306f\u4e2d\u6b62\u3055\u308c\u307e\u305b\u3093\u3002 SM\u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u30b9\u30c6\u30fc\u30bf\u30b9\u3092\u8abf\u3079\u308b\u306b\u306f\u3001\u30c4\u30fc\u30eb\u30d0\u30fc\u306e[SM]\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3053\u306e\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u958b\u304d\u307e\u3059\u3002
+HSM_COMPONENT_UNAVAILABLE = \u30b5\u30fc\u30d0\u30fc\u5074\u306eSM\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u304c\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 
 STATUSTBB_Failover = \u30d5\u30a7\u30a4\u30eb\u30aa\u30fc\u30d0\u30fc
 STATUSTBB_Failover_tt = \u30d5\u30a7\u30a4\u30eb\u30aa\u30fc\u30d0\u30fc\u30b5\u30fc\u30d0\u30fc
@@ -694,7 +694,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>\u6ce8\u610f\uff1a</b> \
 	\u8a2d\u5b9a\u3078\u306e\u5909\u66f4\u3092\u6709\u52b9\u3059\u308b\u306b\u306f\u3001amavisd\u3092\u518d\u8d77\u52d5\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
-Alert_HSM = <b>\u6ce8\u610f\uff1a</b> \u624b\u52d5\u3067HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb\u3059\u308b\u306b\u306f\u3001[HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb]\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002 \u307e\u305f\u3001cron\u30b8\u30e7\u30d6\u3092\u901a\u3058\u3066\u30b5\u30fc\u30d0\u30fc\u4e0a\u3067HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u4e88\u5b9a\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002 <br>
+Alert_HSM = <b>\u6ce8\u610f\uff1a</b> \u624b\u52d5\u3067SM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb\u3059\u308b\u306b\u306f\u3001[SM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u958b\u59cb]\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002 \u307e\u305f\u3001cron\u30b8\u30e7\u30d6\u3092\u901a\u3058\u3066\u30b5\u30fc\u30d0\u30fc\u4e0a\u3067SM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u4e88\u5b9a\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002 <br>
 Alert_InternalPassword = <b>\u6ce8\u610f\uff1a</b> \u3053\u308c\u3089\u306e\u8a2d\u5b9a\u306f\u3001\u5916\u90e8\u8a8d\u8a3c\u3092\u4f7f\u7528\u3059\u308b\u3088\u3046\u306b\u8a2d\u5b9a\u3055\u308c\u305f\u30c9\u30e1\u30a4\u30f3\u5185\u306e\u30e6\u30fc\u30b6\u30fc\u306b\u3088\u3063\u3066\u8a2d\u5b9a\u3055\u308c\u305f\u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u306f\u5f71\u97ff\u3057\u307e\u305b\u3093\u3002
 Alert_ExternalPassword = \u30b7\u30b9\u30c6\u30e0\u304c\u5916\u90e8\u8a8d\u8a3c\u3092\u4f7f\u7528\u3059\u308b\u3088\u3046\u306b\u8a2d\u5b9a\u3055\u308c\u3066\u3044\u308b\u305f\u3081\u3001\
 \u3059\u3079\u3066\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u8a2d\u5b9a\u306f\u7121\u52b9\u3067\u3059\u3002
@@ -713,9 +713,9 @@ Alert_Flush_Theme_Cache = <b>\u6ce8\u610f\uff1a</b> \
 
 Alert_Ngnix = <b>\u6ce8\u610f\uff1a</b>\u8a2d\u5b9a\u3078\u306e\u5909\u66f4\u3092\u6709\u52b9\u3059\u308b\u306b\u306f\u3001Ngnix\u3092\u518d\u8d77\u52d5\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 
-HSM_ProcessStatus = HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u5b9f\u884c\u3057\u3066\u3044\u307e\u3059\u3002<br>\u79fb\u52d5\u3057\u305fBlob\uff1a{0}\u3002\u51e6\u7406\u3055\u308c\u305f\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\uff1a{1}\u3002\u6b8b\u308a\u306e\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\uff1a{2}\u3002
-HSM_StatusReport = \u6700\u5f8c\u306eHSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306f{0}\u306b\u958b\u59cb\u3055\u308c\u3001{1}\u306b\u7d42\u4e86\u3057\u307e\u3057\u305f\u3002
-HSM_InfoUnavailable = \u6700\u5f8c\u306eHSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306b\u95a2\u3059\u308b\u60c5\u5831\u306f\u3042\u308a\u307e\u305b\u3093
+HSM_ProcessStatus = SM\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u5b9f\u884c\u3057\u3066\u3044\u307e\u3059\u3002<br>\u79fb\u52d5\u3057\u305fBlob\uff1a{0}\u3002\u51e6\u7406\u3055\u308c\u305f\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\uff1a{1}\u3002\u6b8b\u308a\u306e\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\uff1a{2}\u3002
+HSM_StatusReport = \u6700\u5f8c\u306eSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306f{0}\u306b\u958b\u59cb\u3055\u308c\u3001{1}\u306b\u7d42\u4e86\u3057\u307e\u3057\u305f\u3002
+HSM_InfoUnavailable = \u6700\u5f8c\u306eSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306b\u95a2\u3059\u308b\u60c5\u5831\u306f\u3042\u308a\u307e\u305b\u3093
 
 SERTBB_New_tt = \u65b0\u3057\u3044\u30b5\u30fc\u30d0\u30fc
 SERTBB_Edit_tt = \u30b5\u30fc\u30d0\u30fc\u3092\u7de8\u96c6
@@ -829,8 +829,8 @@ NAD_Tab_AUTH = \u8a8d\u8a3c
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u30b5\u30fc\u30d3\u30b9
-NAD_Tab_VolumeMgt = \u30dc\u30ea\u30e5\u30fc\u30e0
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u30b9\u30c8\u30ec\u30fc\u30b8\u7ba1\u7406
+NAD_Tab_HSM = \u30b9\u30c8\u30ec\u30fc\u30b8\u7ba1\u7406
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = \u30d7\u30ed\u30ad\u30b7
 NAD_Tab_Bind_IP = IP\u30a2\u30c9\u30ec\u30b9\u306e\u30d0\u30a4\u30f3\u30c9
@@ -1849,7 +1849,7 @@ FAILED_MOVE_ALIAS = \u30a8\u30a4\u30ea\u30a2\u30b9\u306e\u79fb\u52d5\u306b\u5931
 FAILED_REINDEX = \u30a4\u30f3\u30c7\u30c3\u30af\u30b9\u306e\u518d\u4f5c\u6210\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u30a8\u30e9\u30fc\u30b3\u30fc\u30c9{0}
 FAILED_REINDEX_DETAILS = \u8a73\u7d30\uff1a
 
-FAILED_HSM = HSM\u30bb\u30c3\u30b7\u30e7\u30f3\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u30a8\u30e9\u30fc\u30b3\u30fc\u30c9{0}
+FAILED_HSM = SM\u30bb\u30c3\u30b7\u30e7\u30f3\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u30a8\u30e9\u30fc\u30b3\u30fc\u30c9{0}
 FAILED_HSM_DETAILS = \u8a73\u7d30\uff1a
 
 ERROR_CODE = \u30a8\u30e9\u30fc\u30b3\u30fc\u30c9\uff1a
