--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -633,11 +633,11 @@ DLTBB_Delete_tt = \uadf8\ub8f9\uc744 \uc0ad\uc81c\ud569\ub2c8\ub2e4.
 DLTBB_Edit_tt = \uadf8\ub8f9\uc744 \ud3b8\uc9d1\ud569\ub2c8\ub2e4.
 DLTBB_Cancel_tt = \uadf8\ub8f9 \ub9cc\ub4e4\uae30\ub97c \ucde8\uc18c\ud569\ub2c8\ub2e4.
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = HSM \uc138\uc158\uc744 \uc2dc\uc791\ud558\uae30 \uc704\ud55c HSM \ub300\ud654 \uc0c1\uc790\ub97c \uc5fd\ub2c8\ub2e4.
-HSM_Title = HSM
-HSM_Server_tt = \uc774 \ub300\ud654 \uc0c1\uc790\ub97c \ub2eb\uc544\ub3c4 HSM \uc138\uc158\uc774 \uc911\ub2e8\ub418\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. HSM \uc138\uc158\uc758 \uc0c1\ud0dc\ub97c \ud655\uc778\ud558\ub824\uba74 \ub3c4\uad6c \ubaa8\uc74c\uc5d0\uc11c HSM \ubc84\ud2bc\uc744 \ud074\ub9ad\ud558\uc5ec \uc774 \ub300\ud654 \uc0c1\uc790\ub97c \ub2e4\uc2dc \uc5ec\uc138\uc694.
-HSM_COMPONENT_UNAVAILABLE = \uc11c\ubc84 \ucabd HSM \uad6c\uc131 \uc694\uc18c\uac00 \uc124\uce58\ub418\uc5b4 \uc788\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = SM \uc138\uc158\uc744 \uc2dc\uc791\ud558\uae30 \uc704\ud55c SM \ub300\ud654 \uc0c1\uc790\ub97c \uc5fd\ub2c8\ub2e4.
+HSM_Title = SM
+HSM_Server_tt = \uc774 \ub300\ud654 \uc0c1\uc790\ub97c \ub2eb\uc544\ub3c4 SM \uc138\uc158\uc774 \uc911\ub2e8\ub418\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. SM \uc138\uc158\uc758 \uc0c1\ud0dc\ub97c \ud655\uc778\ud558\ub824\uba74 \ub3c4\uad6c \ubaa8\uc74c\uc5d0\uc11c SM \ubc84\ud2bc\uc744 \ud074\ub9ad\ud558\uc5ec \uc774 \ub300\ud654 \uc0c1\uc790\ub97c \ub2e4\uc2dc \uc5ec\uc138\uc694.
+HSM_COMPONENT_UNAVAILABLE = \uc11c\ubc84 \ucabd SM \uad6c\uc131 \uc694\uc18c\uac00 \uc124\uce58\ub418\uc5b4 \uc788\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 
 STATUSTBB_Failover = \uc7a5\uc560 \uc870\uce58
 STATUSTBB_Failover_tt = \uc7a5\uc560 \uc870\uce58 \uc11c\ubc84
@@ -694,7 +694,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>\ucc38\uace0:</b> \
 	\ubcc0\uacbd\ud55c \uc124\uc815\uc744 \uc801\uc6a9\ud558\ub824\uba74 amavisd\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ud569\ub2c8\ub2e4.
-Alert_HSM = <b>\ucc38\uace0:</b> "HSM \uc138\uc158 \uc2dc\uc791" \ubc84\ud2bc\uc744 \ub20c\ub7ec \uc218\ub3d9\uc73c\ub85c HSM \uc138\uc158\uc744 \uc2dc\uc791\ud560 \uc218 \uc788\uc73c\uba70, cron \uc791\uc5c5\uc744 \ud1b5\ud574 \uc11c\ubc84\uc5d0\uc11c HSM \uc138\uc158\uc744 \uc608\uc57d\ud560 \uc218\ub3c4 \uc788\uc2b5\ub2c8\ub2e4.<br>
+Alert_HSM = <b>\ucc38\uace0:</b> "SM \uc138\uc158 \uc2dc\uc791" \ubc84\ud2bc\uc744 \ub20c\ub7ec \uc218\ub3d9\uc73c\ub85c SM \uc138\uc158\uc744 \uc2dc\uc791\ud560 \uc218 \uc788\uc73c\uba70, cron \uc791\uc5c5\uc744 \ud1b5\ud574 \uc11c\ubc84\uc5d0\uc11c SM \uc138\uc158\uc744 \uc608\uc57d\ud560 \uc218\ub3c4 \uc788\uc2b5\ub2c8\ub2e4.<br>
 Alert_InternalPassword = <b>\ucc38\uace0:</b> \uc774\ub7ec\ud55c \uc124\uc815\uc740 \uc678\ubd80 \uc778\uc99d\uc744 \uc0ac\uc6a9\ud558\ub3c4\ub85d \uad6c\uc131\ub418\uc5b4 \uc788\ub294 \ub3c4\uba54\uc778\uc758 \uc0ac\uc6a9\uc790\ub4e4\uc774 \uc124\uc815\ud55c \ube44\ubc00\ubc88\ud638\uc5d0 \uc601\ud5a5\uc744 \ubbf8\uce58\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 Alert_ExternalPassword = \uc2dc\uc2a4\ud15c\uc774 \uc678\ubd80 \uc778\uc99d\uc744 \uc0ac\uc6a9\ud558\ub3c4\ub85d \uad6c\uc131\ub418\uc5c8\uc73c\ubbc0\ub85c \ubaa8\ub4e0 \ube44\ubc00\ubc88\ud638 \uc124\uc815\uc744\
                 \uc0ac\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
@@ -713,9 +713,9 @@ Alert_Flush_Theme_Cache = <b>\ucc38\uace0:</b> \
 
 Alert_Ngnix = <b>\ucc38\uace0:</b> \ubcc0\uacbd\ud55c \uc124\uc815\uc744 \uc801\uc6a9\ud558\ub824\uba74 Ngnix\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ud569\ub2c8\ub2e4.
 
-HSM_ProcessStatus = HSM \uc138\uc158\uc774 \uc2e4\ud589 \uc911\uc785\ub2c8\ub2e4.<br>{0}\uac1c\uc758 Blob\uc774 \uc774\ub3d9\ub418\uc5c8\uc2b5\ub2c8\ub2e4. {1}\uac1c\uc758 \ud3b8\uc9c0\ud568\uc774 \ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4. {2}\uac1c\uc758 \ud3b8\uc9c0\ud568\uc774 \ub0a8\uc544 \uc788\uc2b5\ub2c8\ub2e4.
-HSM_StatusReport = \ub9c8\uc9c0\ub9c9 HSM \uc138\uc158\uc740 {0}\uc5d0 \uc2dc\uc791\ud558\uc5ec {1}\uc5d0 \uc885\ub8cc\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
-HSM_InfoUnavailable = \ub9c8\uc9c0\ub9c9 HSM \uc138\uc158\uc5d0 \ub300\ud55c \uc815\ubcf4\ub97c \uc774\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+HSM_ProcessStatus = SM \uc138\uc158\uc774 \uc2e4\ud589 \uc911\uc785\ub2c8\ub2e4.<br>{0}\uac1c\uc758 Blob\uc774 \uc774\ub3d9\ub418\uc5c8\uc2b5\ub2c8\ub2e4. {1}\uac1c\uc758 \ud3b8\uc9c0\ud568\uc774 \ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4. {2}\uac1c\uc758 \ud3b8\uc9c0\ud568\uc774 \ub0a8\uc544 \uc788\uc2b5\ub2c8\ub2e4.
+HSM_StatusReport = \ub9c8\uc9c0\ub9c9 SM \uc138\uc158\uc740 {0}\uc5d0 \uc2dc\uc791\ud558\uc5ec {1}\uc5d0 \uc885\ub8cc\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+HSM_InfoUnavailable = \ub9c8\uc9c0\ub9c9 SM \uc138\uc158\uc5d0 \ub300\ud55c \uc815\ubcf4\ub97c \uc774\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 
 SERTBB_New_tt = \uc0c8 \uc11c\ubc84
 SERTBB_Edit_tt = \uc11c\ubc84 \ud3b8\uc9d1
@@ -829,8 +829,8 @@ NAD_Tab_AUTH = \uc778\uc99d
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \uc11c\ube44\uc2a4
-NAD_Tab_VolumeMgt = \ubcfc\ub968
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \uc2a4\ud1a0\ub9ac\uc9c0 \uad00\ub9ac
+NAD_Tab_HSM = \uc2a4\ud1a0\ub9ac\uc9c0 \uad00\ub9ac
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = \ud504\ub85d\uc2dc
 NAD_Tab_Bind_IP = IP \uc8fc\uc18c \ubc14\uc778\ub529
@@ -1841,7 +1841,7 @@ FAILED_MOVE_ALIAS = \ubcc4\uce6d\uc744 \uc774\ub3d9\ud558\uc9c0 \ubabb\ud588\uc2
 FAILED_REINDEX = \uc7ac\uc0c9\uc778\ud654\uc5d0 \uc2e4\ud328\ud588\uc2b5\ub2c8\ub2e4. \uc624\ub958 \ucf54\ub4dc {0}
 FAILED_REINDEX_DETAILS = \uc0c1\uc138\uc815\ubcf4:
 
-FAILED_HSM = HSM \uc138\uc158\uc774 \uc2e4\ud328\ud588\uc2b5\ub2c8\ub2e4. \uc624\ub958 \ucf54\ub4dc {0}
+FAILED_HSM = SM \uc138\uc158\uc774 \uc2e4\ud328\ud588\uc2b5\ub2c8\ub2e4. \uc624\ub958 \ucf54\ub4dc {0}
 FAILED_HSM_DETAILS = \uc0c1\uc138\uc815\ubcf4:
 
 ERROR_CODE = \uc624\ub958 \ucf54\ub4dc:
