--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = \u015etergere list\u0103 de distribu\u0163ie
 DLTBB_Edit_tt = Editare list\u0103 de distribu\u0163ie
 DLTBB_Cancel_tt = Anulare creare list\u0103 de distribu\u0163ie
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Deschidere caset\u0103 de dialog HSM pentru a \u00eencepe o sesiune HSM
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Deschidere caset\u0103 de dialog SM pentru a \u00eencepe o sesiune SM
+HSM_Title = SM
 HSM_Server_tt = \
-	Sesiunea HSM nu va fi abandonat\u0103 la \u00eenchiderea acestei casete de dialog. \
-	Pentru a verifica starea sesiunii HSM, redeschide\u0163i caseta de dialog ap\u0103s\u00e2nd pe butonul HSM din bara de instrumente.
-HSM_COMPONENT_UNAVAILABLE = Nu este instalat\u0103 componenta HSM de la server.
+	Sesiunea SM nu va fi abandonat\u0103 la \u00eenchiderea acestei casete de dialog. \
+	Pentru a verifica starea sesiunii SM, redeschide\u0163i caseta de dialog ap\u0103s\u00e2nd pe butonul SM din bara de instrumente.
+HSM_COMPONENT_UNAVAILABLE = Nu este instalat\u0103 componenta SM de la server.
 
 STATUSTBB_Failover = Reluare \u00een caz de e\u015fec
 STATUSTBB_Failover_tt = Server de reluare \u00een caz de e\u015fec
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	Pentru aplicarea modific\u0103rilor set\u0103rilor este necesar\u0103 repornirea aplica\u0163iei amavisd.
 Alert_HSM = \
 	<b>Not\u0103:</b> \
-	Pute\u0163i ini\u0163ia manual o sesiune HSM ap\u0103s\u00e2nd butonul \u201eIni\u0163iere sesiune HSM\u201d. \
-	De asemenea, sesiunile HSM pot fi planificate pe servere prin joburi cron. <br> \
+	Pute\u0163i ini\u0163ia manual o sesiune SM ap\u0103s\u00e2nd butonul \u201eIni\u0163iere sesiune SM\u201d. \
+	De asemenea, sesiunile SM pot fi planificate pe servere prin joburi cron. <br> \
 
 Alert_InternalPassword = <b>Not\u0103:</b> Aceste set\u0103ri nu afecteaz\u0103 parolele setate de utilizatori \u00een domeniile \
 		configurate s\u0103 utilizeze autentificare extern\u0103.
@@ -730,9 +730,9 @@ Alert_Flush_Theme_Cache = <b>Not\u0103:</b> \
 
 Alert_Ngnix = <b>Not\u0103:</b> Pentru aplicarea modific\u0103rilor set\u0103rilor este necesar\u0103 repornirea aplica\u0163iei Ngnix.
 
-HSM_ProcessStatus = Se execut\u0103 sesiunea HSM.<br>S-au mutat {0} bloburi. {1} c\u0103su\u0163e po\u015ftale procesate. {2} c\u0103su\u0163e po\u015ftale r\u0103mase.
-HSM_StatusReport = Ultima sesiune HSM a \u00eenceput pe {0} \u015fi s-a \u00eencheiat pe {1}
-HSM_InfoUnavailable = Nu sunt disponibile informa\u0163ii despre ultima sesiune HSM
+HSM_ProcessStatus = Se execut\u0103 sesiunea SM.<br>S-au mutat {0} bloburi. {1} c\u0103su\u0163e po\u015ftale procesate. {2} c\u0103su\u0163e po\u015ftale r\u0103mase.
+HSM_StatusReport = Ultima sesiune SM a \u00eenceput pe {0} \u015fi s-a \u00eencheiat pe {1}
+HSM_InfoUnavailable = Nu sunt disponibile informa\u0163ii despre ultima sesiune SM
 
 SERTBB_New_tt = Server nou
 SERTBB_Edit_tt = Editare server
@@ -848,8 +848,8 @@ NAD_Tab_AUTH = Autentificare
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Servicii
-NAD_Tab_VolumeMgt = Volume
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Gestionarea stoc\u0103rii
+NAD_Tab_HSM = Gestionarea stoc\u0103rii
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = Adres\u0103 IP leg\u0103turi
@@ -1878,7 +1878,7 @@ FAILED_MOVE_ALIAS = Mutare e\u015fuat\u0103 a aliasului
 FAILED_REINDEX = Reindexare e\u015fuat\u0103. Codul de eroare {0}
 FAILED_REINDEX_DETAILS = Detalii:
 
-FAILED_HSM = Sesiune HSM e\u015fuat\u0103. Codul de eroare {0}
+FAILED_HSM = Sesiune SM e\u015fuat\u0103. Codul de eroare {0}
 FAILED_HSM_DETAILS = Detalii:
 
 ERROR_CODE = Cod de eroare:
