--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -636,13 +636,13 @@ DLTBB_Delete_tt = \u5220\u9664\u901a\u8baf\u7ec4\u5217\u8868
 DLTBB_Edit_tt = \u7f16\u8f91\u901a\u8baf\u7ec4\u5217\u8868
 DLTBB_Cancel_tt = \u53d6\u6d88\u901a\u8baf\u7ec4\u5217\u8868\u521b\u5efa
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u6253\u5f00 HSM \u5bf9\u8bdd\u6846\u4ee5\u5f00\u59cb HSM \u4f1a\u8bdd
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u6253\u5f00 SM \u5bf9\u8bdd\u6846\u4ee5\u5f00\u59cb SM \u4f1a\u8bdd
+HSM_Title = SM
 HSM_Server_tt = \
-	 \u5173\u95ed\u6b64\u5bf9\u8bdd\u6846\u540e\uff0cHSM \u4f1a\u8bdd\u4e0d\u4f1a\u4e2d\u6b62\u3002\
-	 \u8981\u68c0\u67e5 HSM \u4f1a\u8bdd\u7684\u72b6\u6001\uff0c\u70b9\u51fb\u5de5\u5177\u680f\u7684 HSM \u6309\u94ae\uff0c\u4ee5\u91cd\u65b0\u663e\u793a\u6b64\u5bf9\u8bdd\u6846\u3002
-HSM_COMPONENT_UNAVAILABLE = \u670d\u52a1\u5668\u4fa7\u7684 HSM \u7ec4\u4ef6\u6ca1\u7528\u5b89\u88c5\u3002
+	 \u5173\u95ed\u6b64\u5bf9\u8bdd\u6846\u540e\uff0cSM \u4f1a\u8bdd\u4e0d\u4f1a\u4e2d\u6b62\u3002\
+	 \u8981\u68c0\u67e5 SM \u4f1a\u8bdd\u7684\u72b6\u6001\uff0c\u70b9\u51fb\u5de5\u5177\u680f\u7684 SM \u6309\u94ae\uff0c\u4ee5\u91cd\u65b0\u663e\u793a\u6b64\u5bf9\u8bdd\u6846\u3002
+HSM_COMPONENT_UNAVAILABLE = \u670d\u52a1\u5668\u4fa7\u7684 SM \u7ec4\u4ef6\u6ca1\u7528\u5b89\u88c5\u3002
 
 STATUSTBB_Failover = \u6545\u969c\u8f6c\u79fb
 STATUSTBB_Failover_tt = \u6545\u969c\u8f6c\u79fb\u670d\u52a1\u5668
@@ -702,7 +702,7 @@ Alert_ProxyConfig = \
 Alert_AmavisdRestart = \
 	<b>\u5907\u6ce8:</b> \
 	\u5bf9\u8bbe\u7f6e\u7684\u66f4\u6539\u9700\u8981 amavisd \u91cd\u65b0\u542f\u52a8\u624d\u80fd\u751f\u6548\u3002
-Alert_HSM = <b>\u5907\u6ce8\uff1a</b>\u60a8\u53ef\u4ee5\u901a\u8fc7\u70b9\u51fb\u201c\u5f00\u542f HSM \u4f1a\u8bdd\u201d\u6309\u94ae\uff0c\u4ee5\u624b\u52a8\u65b9\u5f0f\u542f\u52a8\u4e00\u4e2a HSM \u4f1a\u8bdd\u671f\u3002 \u4e5f\u53ef\u901a\u8fc7\u8ba1\u65f6\u64cd\u4f5c\u529f\u80fd\uff0c\u5728\u670d\u52a1\u5668\u4e0a\u6392\u7a0b HSM \u4f1a\u8bdd\u671f\u3002 <br>
+Alert_HSM = <b>\u5907\u6ce8\uff1a</b>\u60a8\u53ef\u4ee5\u901a\u8fc7\u70b9\u51fb\u201c\u5f00\u542f SM \u4f1a\u8bdd\u201d\u6309\u94ae\uff0c\u4ee5\u624b\u52a8\u65b9\u5f0f\u542f\u52a8\u4e00\u4e2a SM \u4f1a\u8bdd\u671f\u3002 \u4e5f\u53ef\u901a\u8fc7\u8ba1\u65f6\u64cd\u4f5c\u529f\u80fd\uff0c\u5728\u670d\u52a1\u5668\u4e0a\u6392\u7a0b SM \u4f1a\u8bdd\u671f\u3002 <br>
 Alert_InternalPassword = <b>\u5907\u6ce8\uff1a</b>\u5bf9\u4e8e\u7528\u6237\u5728\u90a3\u4e9b\u88ab\u914d\u7f6e\u4e3a\u4f7f\u7528\u5916\u90e8\u9a8c\u8bc1\u7684\u7f51\u57df\u4e2d\u8bbe\u7f6e\u7684\u5bc6\u7801\uff0c\u8fd9\u4e9b\u8bbe\u7f6e\u503c\u5bf9\u5176\u6ca1\u6709\u5f71\u54cd\u3002
 Alert_ExternalPassword = \u5df2\u7981\u7528\u6240\u6709\u5bc6\u7801\u8bbe\u7f6e\uff0c\u56e0\u4e3a\u5df2\u5c06\u7cfb\u7edf\u914d\u7f6e\u4e3a \
                 \u4f7f\u7528\u5916\u90e8\u8eab\u4efd\u9a8c\u8bc1\u3002
@@ -722,9 +722,9 @@ Alert_Flush_Theme_Cache = <b>\u6ce8\u610f:</b> \
 
 Alert_Ngnix = <b>\u5907\u6ce8:</b> \u5bf9\u8bbe\u7f6e\u7684\u66f4\u6539\u9700\u8981 Ngnix \u91cd\u65b0\u542f\u52a8\u624d\u80fd\u751f\u6548\u3002
 
-HSM_ProcessStatus = HSM \u4f1a\u8bdd\u6b63\u5728\u8fd0\u884c\u3002<br>\u5df2\u79fb\u52a8 {0} blob\u3002\u5df2\u5904\u7406 {1} \u4e2a\u90ae\u7bb1\u3002\u5269\u4f59 {2} \u4e2a\u90ae\u7bb1\u3002
-HSM_StatusReport = \u4e0a\u6b21 HSM \u4f1a\u8bdd\u5f00\u59cb\u4e8e {0}\uff0c\u7ed3\u675f\u4e8e {1}
-HSM_InfoUnavailable = \u4e0a\u6b21 HSM \u4f1a\u8bdd\u7684\u8d44\u6599\u4e0d\u53ef\u7528
+HSM_ProcessStatus = SM \u4f1a\u8bdd\u6b63\u5728\u8fd0\u884c\u3002<br>\u5df2\u79fb\u52a8 {0} blob\u3002\u5df2\u5904\u7406 {1} \u4e2a\u90ae\u7bb1\u3002\u5269\u4f59 {2} \u4e2a\u90ae\u7bb1\u3002
+HSM_StatusReport = \u4e0a\u6b21 SM \u4f1a\u8bdd\u5f00\u59cb\u4e8e {0}\uff0c\u7ed3\u675f\u4e8e {1}
+HSM_InfoUnavailable = \u4e0a\u6b21 SM \u4f1a\u8bdd\u7684\u8d44\u6599\u4e0d\u53ef\u7528
 
 SERTBB_New_tt = \u65b0\u589e\u670d\u52a1\u5668
 SERTBB_Edit_tt = \u7f16\u8f91\u670d\u52a1\u5668
@@ -840,8 +840,8 @@ NAD_Tab_AUTH = \u9a8c\u8bc1
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u670d\u52a1
-NAD_Tab_VolumeMgt = \u5377
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u5b58\u50a8\u7ba1\u7406
+NAD_Tab_HSM = \u5b58\u50a8\u7ba1\u7406
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = \u4ee3\u7406
 NAD_Tab_Bind_IP = IP \u5730\u5740\u7ed1\u5b9a
@@ -1870,7 +1870,7 @@ FAILED_MOVE_ALIAS = \u65e0\u6cd5\u79fb\u52a8\u522b\u540d
 FAILED_REINDEX = \u65e0\u6cd5\u91cd\u5efa\u7d22\u5f15\uff0c\u9519\u8bef\u4ee3\u7801 {0}
 FAILED_REINDEX_DETAILS = \u8be6\u7ec6\u8d44\u6599\uff1a
 
-FAILED_HSM = HSM \u4f1a\u8bdd\u51fa\u73b0\u6545\u969c\u3002\u9519\u8bef\u4ee3\u7801 {0}
+FAILED_HSM = SM \u4f1a\u8bdd\u51fa\u73b0\u6545\u969c\u3002\u9519\u8bef\u4ee3\u7801 {0}
 FAILED_HSM_DETAILS = \u8be6\u7ec6\u8d44\u6599\uff1a
 
 ERROR_CODE = \u9519\u8bef\u4ee3\u7801\uff1a
