--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -629,11 +629,11 @@ DLTBB_Delete_tt = \u522a\u9664\u5206\u767c\u6e05\u55ae
 DLTBB_Edit_tt = \u7de8\u8f2f\u5206\u767c\u6e05\u55ae
 DLTBB_Cancel_tt = \u53d6\u6d88\u5206\u767c\u6e05\u55ae\u7684\u5efa\u7acb
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u958b\u555f HSM \u8996\u7a97\u4ee5\u958b\u59cb HSM \u5de5\u4f5c\u968e\u6bb5
-HSM_Title = HSM
-HSM_Server_tt = \u95dc\u9589\u6b64\u8996\u7a97\u5f8c\uff0cHSM \u6642\u9650\u4e0d\u6703\u4e2d\u6b62\u3002 \u8981\u6aa2\u67e5 HSM \u6642\u9650\u7684\u72c0\u614b\uff0c\u8acb\u6309\u4e00\u4e0b\u5de5\u5177\u5217\u7684 HSM \u6309\u9215\uff0c\u4ee5\u91cd\u65b0\u986f\u793a\u6b64\u8996\u7a97\u3002
-HSM_COMPONENT_UNAVAILABLE = \u4f3a\u670d\u5668\u5074\u7684 HSM \u5143\u4ef6\u6c92\u7528\u5b89\u88dd\u3002
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u958b\u555f SM \u8996\u7a97\u4ee5\u958b\u59cb SM \u5de5\u4f5c\u968e\u6bb5
+HSM_Title = SM
+HSM_Server_tt = \u95dc\u9589\u6b64\u8996\u7a97\u5f8c\uff0cSM \u6642\u9650\u4e0d\u6703\u4e2d\u6b62\u3002 \u8981\u6aa2\u67e5 SM \u6642\u9650\u7684\u72c0\u614b\uff0c\u8acb\u6309\u4e00\u4e0b\u5de5\u5177\u5217\u7684 SM \u6309\u9215\uff0c\u4ee5\u91cd\u65b0\u986f\u793a\u6b64\u8996\u7a97\u3002
+HSM_COMPONENT_UNAVAILABLE = \u4f3a\u670d\u5668\u5074\u7684 SM \u5143\u4ef6\u6c92\u7528\u5b89\u88dd\u3002
 
 STATUSTBB_Failover = \u6545\u969c\u8f49\u79fb
 STATUSTBB_Failover_tt = \u6545\u969c\u8f49\u79fb\u4f3a\u670d\u5668
@@ -688,7 +688,7 @@ Alert_ServerRestart = \
 Alert_ProxyConfig = \
     <b>\u8b66\u793a\uff1a</b> \u5c0d\u9019\u4e9b\u8a2d\u5b9a\u503c\u7684\u8b8a\u52d5\uff0c\u9808\u5728 proxy \u4f3a\u670d\u5668\u91cd\u65b0\u555f\u52d5\u5f8c\u65b9\u80fd\u751f\u6548\u3002
 Alert_AmavisdRestart = <b>\u5099\u8a3b\uff1a</b> \u8b8a\u66f4\u8a2d\u5b9a\u9700\u8981\u91cd\u65b0\u5553\u52d5 amavisd \u624d\u751f\u6548\u3002
-Alert_HSM = <b>\u5099\u8a3b\uff1a</b> \u4f60\u53ef\u6309\u4e00\u4e0b\u300c\u555f\u52d5 HSM \u6642\u9650\u300d\u6309\u9215\uff0c\u4ee5\u624b\u52d5\u65b9\u5f0f\u555f\u52d5\u4e00\u500b HSM \u6642\u9650\u3002 \u4e5f\u53ef\u900f\u904e\u8a08\u6642\u529f\u80fd\u5728\u4f3a\u670d\u5668\u4e0a\u5b89\u6392 HSM \u6642\u9650\u3002 <br>
+Alert_HSM = <b>\u5099\u8a3b\uff1a</b> \u4f60\u53ef\u6309\u4e00\u4e0b\u300c\u555f\u52d5 SM \u6642\u9650\u300d\u6309\u9215\uff0c\u4ee5\u624b\u52d5\u65b9\u5f0f\u555f\u52d5\u4e00\u500b SM \u6642\u9650\u3002 \u4e5f\u53ef\u900f\u904e\u8a08\u6642\u529f\u80fd\u5728\u4f3a\u670d\u5668\u4e0a\u5b89\u6392 SM \u6642\u9650\u3002 <br>
 Alert_InternalPassword = <b>\u5099\u8a3b\uff1a</b>\u5c0d\u65bc\u7528\u6236\u5728\u90a3\u4e9b\u88ab\u8a2d\u5b9a\u70ba\u4f7f\u7528\u5916\u90e8\u8a8d\u8b49\u7684\u7db2\u57df\u4e2d\u8a2d\u5b9a\u7684\u5bc6\u78bc\uff0c\u9019\u4e9b\u8a2d\u5b9a\u503c\u5c0d\u5176\u6c92\u6709\u5f71\u97ff\u3002
 Alert_ExternalPassword = \u6240\u6709\u5bc6\u78bc\u8a2d\u5b9a\u5df2\u95dc\u9589\uff0c\u56e0\u70ba\u7cfb\u7d71\u5df2\u88ab\u8a2d\u5b9a \
     \uff0c\u4ee5\u4f7f\u7528\u5916\u90e8\u8a8d\u8b49\u3002
@@ -705,9 +705,9 @@ Alert_Flush_Theme_Cache = <b>\u9644\u8a3b\uff1a</b> \
 
 Alert_Ngnix = <b>\u5099\u8a3b\uff1a</b> \u8b8a\u66f4\u8a2d\u5b9a\u9700\u8981\u91cd\u65b0\u5553\u52d5 Ngnix \u624d\u751f\u6548\u3002
 
-HSM_ProcessStatus = HSM \u5de5\u4f5c\u968e\u6bb5\u6b63\u5728\u57f7\u884c\u3002<br>\u5df2\u79fb\u52d5 {0}  blob\u3002\u5df2\u8655\u7406 {1}  \u500b\u90f5\u7bb1\u3002\u5269\u9918 {2} \u500b\u90f5\u7bb1\u3002
-HSM_StatusReport = \u4e0a\u6b21 HSM \u6642\u9650\u958b\u59cb\u65bc {0}\uff0c\u7d50\u675f\u65bc {1}
-HSM_InfoUnavailable = \u4e0a\u6b21 HSM \u6642\u9650\u7684\u8cc7\u6599\u4e0d\u53ef\u7528
+HSM_ProcessStatus = SM \u5de5\u4f5c\u968e\u6bb5\u6b63\u5728\u57f7\u884c\u3002<br>\u5df2\u79fb\u52d5 {0}  blob\u3002\u5df2\u8655\u7406 {1}  \u500b\u90f5\u7bb1\u3002\u5269\u9918 {2} \u500b\u90f5\u7bb1\u3002
+HSM_StatusReport = \u4e0a\u6b21 SM \u6642\u9650\u958b\u59cb\u65bc {0}\uff0c\u7d50\u675f\u65bc {1}
+HSM_InfoUnavailable = \u4e0a\u6b21 SM \u6642\u9650\u7684\u8cc7\u6599\u4e0d\u53ef\u7528
 
 SERTBB_New_tt = \u65b0\u589e\u4f3a\u670d\u5668
 SERTBB_Edit_tt = \u4fee\u6539\u4f3a\u670d\u5668
@@ -821,8 +821,8 @@ NAD_Tab_AUTH = \u8a8d\u8b49
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u670d\u52d9
-NAD_Tab_VolumeMgt = \u5377\u518a
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u5b58\u5132\u7ba1\u7406
+NAD_Tab_HSM = \u5b58\u5132\u7ba1\u7406
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP \u4f4d\u5740\u7e6b\u7d50
@@ -1836,7 +1836,7 @@ FAILED_MOVE_ALIAS = \u7121\u6cd5\u79fb\u52d5\u5225\u540d
 FAILED_REINDEX = \u7121\u6cd5\u91cd\u5efa\u7d22\u5f15\uff0c \u932f\u8aa4\u4ee3\u78bc {0}
 FAILED_REINDEX_DETAILS = \u8a73\u7d30\u8cc7\u6599\ufe55
 
-FAILED_HSM = HSM \u6642\u9650\u51fa\u73fe\u6545\u969c\u3002 \u932f\u8aa4\u4ee3\u78bc {0}
+FAILED_HSM = SM \u6642\u9650\u51fa\u73fe\u6545\u969c\u3002 \u932f\u8aa4\u4ee3\u78bc {0}
 FAILED_HSM_DETAILS = \u8a73\u7d30\u8cc7\u6599\ufe55
 
 ERROR_CODE = \u932f\u8aa4\u4ee3\u78bc\uff1a
