--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -637,13 +637,13 @@ DLTBB_Delete_tt = \u522a\u9664\u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae
 DLTBB_Edit_tt = \u7de8\u8f2f\u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae
 DLTBB_Cancel_tt = \u53d6\u6d88\u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae\u7684\u5efa\u7acb
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = \u958b\u555f HSM \u5c0d\u8a71\u65b9\u584a\u4ee5\u555f\u52d5 HSM \u5de5\u4f5c\u968e\u6bb5
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = \u958b\u555f SM \u5c0d\u8a71\u65b9\u584a\u4ee5\u555f\u52d5 SM \u5de5\u4f5c\u968e\u6bb5
+HSM_Title = SM
 HSM_Server_tt = \
-	 \u95dc\u9589\u6b64\u5c0d\u8a71\u65b9\u584a\u5f8c\uff0cHSM \u5de5\u4f5c\u968e\u6bb5\u4e26\u4e0d\u6703\u4e2d\u6b62\u3002\
-	 \u8981\u6aa2\u67e5 HSM \u5de5\u4f5c\u968e\u6bb5\u7684\u72c0\u614b\uff0c\u53ef\u6309\u4e00\u4e0b\u5de5\u5177\u5217\u7684 HSM \u6309\u9215\uff0c\u4ee5\u91cd\u65b0\u986f\u793a\u6b64\u5c0d\u8a71\u65b9\u584a\u3002
-HSM_COMPONENT_UNAVAILABLE = \u4f3a\u670d\u5668\u5074\u7684 HSM \u5143\u4ef6\u672a\u5b89\u88dd\u3002
+	 \u95dc\u9589\u6b64\u5c0d\u8a71\u65b9\u584a\u5f8c\uff0cSM \u5de5\u4f5c\u968e\u6bb5\u4e26\u4e0d\u6703\u4e2d\u6b62\u3002\
+	 \u8981\u6aa2\u67e5 SM \u5de5\u4f5c\u968e\u6bb5\u7684\u72c0\u614b\uff0c\u53ef\u6309\u4e00\u4e0b\u5de5\u5177\u5217\u7684 SM \u6309\u9215\uff0c\u4ee5\u91cd\u65b0\u986f\u793a\u6b64\u5c0d\u8a71\u65b9\u584a\u3002
+HSM_COMPONENT_UNAVAILABLE = \u4f3a\u670d\u5668\u5074\u7684 SM \u5143\u4ef6\u672a\u5b89\u88dd\u3002
 
 STATUSTBB_Failover = \u5bb9\u932f\u79fb\u8f49
 STATUSTBB_Failover_tt = \u5bb9\u932f\u79fb\u8f49\u4f3a\u670d\u5668
@@ -705,8 +705,8 @@ Alert_AmavisdRestart = \
 	\u8a2d\u5b9a\u503c\u7684\u8b8a\u66f4\u9700\u8981\u91cd\u65b0\u555f\u52d5 amavisd \u624d\u80fd\u751f\u6548\u3002
 Alert_HSM = \
 	<b>\u9644\u8a3b:</b> \
-	\u60a8\u53ef\u4ee5\u6309\u4e0b\u300c\u555f\u52d5 HSM \u5de5\u4f5c\u968e\u6bb5\u300d\u6309\u9215\uff0c\u4ee5\u624b\u52d5\u65b9\u5f0f\u555f\u52d5 HSM \u5de5\u4f5c\u968e\u6bb5\u3002\
-	\u540c\u6642\u4e5f\u53ef\u900f\u904e cron \u5de5\u4f5c\u5728\u4f3a\u670d\u5668\u4e0a\u6392\u5b9a HSM \u5de5\u4f5c\u968e\u6bb5\u6642\u7a0b\u3002 <br>\
+	\u60a8\u53ef\u4ee5\u6309\u4e0b\u300c\u555f\u52d5 SM \u5de5\u4f5c\u968e\u6bb5\u300d\u6309\u9215\uff0c\u4ee5\u624b\u52d5\u65b9\u5f0f\u555f\u52d5 SM \u5de5\u4f5c\u968e\u6bb5\u3002\
+	\u540c\u6642\u4e5f\u53ef\u900f\u904e cron \u5de5\u4f5c\u5728\u4f3a\u670d\u5668\u4e0a\u6392\u5b9a SM \u5de5\u4f5c\u968e\u6bb5\u6642\u7a0b\u3002 <br>\
 
 Alert_InternalPassword = <b>\u9644\u8a3b:</b>\u5c0d\u65bc\u4f7f\u7528\u8005\u5728\u88ab\u8a2d\u5b9a\u70ba\u4f7f\u7528\u5916\u90e8\u9a57\u8b49\u7684\u7db2\u57df\u4e2d\u6240\u8a2d\u5b9a\u7684\u5bc6\u78bc\uff0c \
 		\u9019\u4e9b\u8a2d\u5b9a\u503c\u5c0d\u5176\u6c92\u6709\u5f71\u97ff\u3002
@@ -729,9 +729,9 @@ Alert_Flush_Theme_Cache = <b>\u9644\u8a3b:</b> \
 
 Alert_Ngnix = <b>\u9644\u8a3b:</b> \u8a2d\u5b9a\u503c\u8b8a\u66f4\u9700\u8981\u91cd\u65b0\u555f\u52d5 Ngnix \u624d\u80fd\u751f\u6548\u3002
 
-HSM_ProcessStatus = HSM \u5de5\u4f5c\u968e\u6bb5\u6b63\u5728\u57f7\u884c\u3002<br> \u5df2\u79fb\u52d5 {0} \u500b blob\u3002\u5df2\u8655\u7406 {1} \u500b\u4fe1\u7bb1\u3002\u5269\u9918 {2} \u500b\u4fe1\u7bb1\u3002
-HSM_StatusReport = \u4e0a\u6b21 HSM \u5de5\u4f5c\u968e\u6bb5\u958b\u59cb\u65bc {0}\uff0c\u7d50\u675f\u65bc {1}
-HSM_InfoUnavailable = \u4e0a\u6b21 HSM \u5de5\u4f5c\u968e\u6bb5\u7684\u8cc7\u6599\u7121\u6cd5\u4f7f\u7528
+HSM_ProcessStatus = SM \u5de5\u4f5c\u968e\u6bb5\u6b63\u5728\u57f7\u884c\u3002<br> \u5df2\u79fb\u52d5 {0} \u500b blob\u3002\u5df2\u8655\u7406 {1} \u500b\u4fe1\u7bb1\u3002\u5269\u9918 {2} \u500b\u4fe1\u7bb1\u3002
+HSM_StatusReport = \u4e0a\u6b21 SM \u5de5\u4f5c\u968e\u6bb5\u958b\u59cb\u65bc {0}\uff0c\u7d50\u675f\u65bc {1}
+HSM_InfoUnavailable = \u4e0a\u6b21 SM \u5de5\u4f5c\u968e\u6bb5\u7684\u8cc7\u6599\u7121\u6cd5\u4f7f\u7528
 
 SERTBB_New_tt = \u65b0\u589e\u4f3a\u670d\u5668
 SERTBB_Edit_tt = \u7de8\u8f2f\u4f3a\u670d\u5668
@@ -847,8 +847,8 @@ NAD_Tab_AUTH = \u9a57\u8b49
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = \u670d\u52d9
-NAD_Tab_VolumeMgt = \u78c1\u789f\u5340
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = \u5b58\u5132\u7ba1\u7406
+NAD_Tab_HSM = \u5b58\u5132\u7ba1\u7406
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP \u4f4d\u5740\u7e6b\u7d50
@@ -1877,7 +1877,7 @@ FAILED_MOVE_ALIAS = \u7121\u6cd5\u79fb\u52d5\u5225\u540d
 FAILED_REINDEX = \u7121\u6cd5\u91cd\u65b0\u7d22\u5f15\uff0c\u932f\u8aa4\u78bc {0}
 FAILED_REINDEX_DETAILS = \u8a73\u7d30\u8cc7\u6599:
 
-FAILED_HSM = HSM \u5de5\u4f5c\u968e\u6bb5\u5931\u6557\u3002\u932f\u8aa4\u78bc {0}
+FAILED_HSM = SM \u5de5\u4f5c\u968e\u6bb5\u5931\u6557\u3002\u932f\u8aa4\u78bc {0}
 FAILED_HSM_DETAILS = \u8a73\u7d30\u8cc7\u6599:
 
 ERROR_CODE = \u932f\u8aa4\u78bc:
